@@ -1,23 +1,24 @@
 //
-//  ========================================================================
-//  Copyright (c) 1995-2019 Mort Bay Consulting Pty. Ltd.
-//  ------------------------------------------------------------------------
-//  All rights reserved. This program and the accompanying materials
-//  are made available under the terms of the Eclipse Public License v1.0
-//  and Apache License v2.0 which accompanies this distribution.
+// ========================================================================
+// Copyright (c) 1995-2020 Mort Bay Consulting Pty Ltd and others.
 //
-//      The Eclipse Public License is available at
-//      http://www.eclipse.org/legal/epl-v10.html
+// This program and the accompanying materials are made available under
+// the terms of the Eclipse Public License 2.0 which is available at
+// https://www.eclipse.org/legal/epl-2.0
 //
-//      The Apache License v2.0 is available at
-//      http://www.opensource.org/licenses/apache2.0.php
+// This Source Code may also be made available under the following
+// Secondary Licenses when the conditions for such availability set
+// forth in the Eclipse Public License, v. 2.0 are satisfied:
+// the Apache License v2.0 which is available at
+// https://www.apache.org/licenses/LICENSE-2.0
 //
-//  You may elect to redistribute this code under either of these licenses.
-//  ========================================================================
+// SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
+// ========================================================================
 //
 
 package org.eclipse.jetty.client;
 
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -37,9 +38,8 @@ import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
-import java.util.NoSuchElementException;
+import java.util.Map;
 import java.util.Random;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.Exchanger;
@@ -50,14 +50,13 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
-
+import java.util.function.LongConsumer;
 import javax.servlet.ServletException;
 import javax.servlet.ServletOutputStream;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
 import org.eclipse.jetty.client.api.Connection;
-import org.eclipse.jetty.client.api.ContentProvider;
 import org.eclipse.jetty.client.api.ContentResponse;
 import org.eclipse.jetty.client.api.Destination;
 import org.eclipse.jetty.client.api.Request;
@@ -65,12 +64,12 @@ import org.eclipse.jetty.client.api.Response;
 import org.eclipse.jetty.client.api.Result;
 import org.eclipse.jetty.client.http.HttpClientTransportOverHTTP;
 import org.eclipse.jetty.client.http.HttpConnectionOverHTTP;
-import org.eclipse.jetty.client.http.HttpDestinationOverHTTP;
+import org.eclipse.jetty.client.util.AbstractRequestContent;
+import org.eclipse.jetty.client.util.AsyncRequestContent;
 import org.eclipse.jetty.client.util.BufferingResponseListener;
-import org.eclipse.jetty.client.util.BytesContentProvider;
-import org.eclipse.jetty.client.util.DeferredContentProvider;
+import org.eclipse.jetty.client.util.BytesRequestContent;
 import org.eclipse.jetty.client.util.FutureResponseListener;
-import org.eclipse.jetty.client.util.StringContentProvider;
+import org.eclipse.jetty.client.util.StringRequestContent;
 import org.eclipse.jetty.http.BadMessageException;
 import org.eclipse.jetty.http.HttpField;
 import org.eclipse.jetty.http.HttpHeader;
@@ -79,16 +78,19 @@ import org.eclipse.jetty.http.HttpMethod;
 import org.eclipse.jetty.http.HttpScheme;
 import org.eclipse.jetty.http.HttpVersion;
 import org.eclipse.jetty.io.AbstractConnection;
+import org.eclipse.jetty.io.ClientConnector;
 import org.eclipse.jetty.io.EndPoint;
+import org.eclipse.jetty.logging.StacklessLogging;
 import org.eclipse.jetty.server.handler.AbstractHandler;
+import org.eclipse.jetty.toolchain.test.Net;
 import org.eclipse.jetty.toolchain.test.jupiter.WorkDir;
 import org.eclipse.jetty.toolchain.test.jupiter.WorkDirExtension;
+import org.eclipse.jetty.util.BufferUtil;
 import org.eclipse.jetty.util.Callback;
 import org.eclipse.jetty.util.FuturePromise;
 import org.eclipse.jetty.util.IO;
 import org.eclipse.jetty.util.Promise;
 import org.eclipse.jetty.util.SocketAddressResolver;
-import org.eclipse.jetty.util.log.StacklessLogging;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.condition.DisabledIfSystemProperty;
@@ -106,11 +108,11 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+// @checkstyle-disable-check : AvoidEscapedUnicodeCharactersCheck
 @ExtendWith(WorkDirExtension.class)
 public class HttpClientTest extends AbstractHttpClientServerTest
 {
     public WorkDir testdir;
-
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
@@ -121,10 +123,11 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         String host = "localhost";
         int port = connector.getLocalPort();
         String path = "/";
-        Response response = client.GET(scenario.getScheme() + "://" + host + ":" + port + path);
+        Request request = client.newRequest(scenario.getScheme() + "://" + host + ":" + port + path);
+        Response response = request.send();
         assertEquals(200, response.getStatus());
 
-        HttpDestinationOverHTTP destination = (HttpDestinationOverHTTP)client.getDestination(scenario.getScheme(), host, port);
+        HttpDestination destination = (HttpDestination)client.resolveDestination(request);
         DuplexConnectionPool connectionPool = (DuplexConnectionPool)destination.getConnectionPool();
 
         long start = System.nanoTime();
@@ -149,7 +152,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_DestinationCount(Scenario scenario) throws Exception
+    public void testDestinationCount(Scenario scenario) throws Exception
     {
         start(scenario, new EmptyServerHandler());
 
@@ -169,7 +172,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_GET_ResponseWithoutContent(Scenario scenario) throws Exception
+    public void testGETResponseWithoutContent(Scenario scenario) throws Exception
     {
         start(scenario, new EmptyServerHandler());
 
@@ -181,13 +184,13 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_GET_ResponseWithContent(Scenario scenario) throws Exception
+    public void testGETResponseWithContent(Scenario scenario) throws Exception
     {
-        final byte[] data = new byte[]{0, 1, 2, 3, 4, 5, 6, 7};
+        byte[] data = new byte[]{0, 1, 2, 3, 4, 5, 6, 7};
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 response.getOutputStream().write(data);
                 baseRequest.setHandled(true);
@@ -205,14 +208,14 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_GET_WithParameters_ResponseWithContent(Scenario scenario) throws Exception
+    public void testGETWithParametersResponseWithContent(Scenario scenario) throws Exception
     {
-        final String paramName1 = "a";
-        final String paramName2 = "b";
+        String paramName1 = "a";
+        String paramName2 = "b";
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 response.setCharacterEncoding("UTF-8");
                 ServletOutputStream output = response.getOutputStream();
@@ -226,7 +229,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         });
 
         String value1 = "\u20AC";
-        String paramValue1 = URLEncoder.encode(value1, "UTF-8");
+        String paramValue1 = URLEncoder.encode(value1, StandardCharsets.UTF_8);
         String query = paramName1 + "=" + paramValue1 + "&" + paramName2;
         ContentResponse response = client.GET(scenario.getScheme() + "://localhost:" + connector.getLocalPort() + "/?" + query);
 
@@ -238,20 +241,22 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_GET_WithParametersMultiValued_ResponseWithContent(Scenario scenario) throws Exception
+    public void testGETWithParametersMultiValuedResponseWithContent(Scenario scenario) throws Exception
     {
-        final String paramName1 = "a";
-        final String paramName2 = "b";
+        String paramName1 = "a";
+        String paramName2 = "b";
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 response.setCharacterEncoding("UTF-8");
                 ServletOutputStream output = response.getOutputStream();
                 String[] paramValues1 = request.getParameterValues(paramName1);
                 for (String paramValue : paramValues1)
+                {
                     output.write(paramValue.getBytes(StandardCharsets.UTF_8));
+                }
                 String paramValue2 = request.getParameter(paramName2);
                 output.write(paramValue2.getBytes(StandardCharsets.UTF_8));
                 baseRequest.setHandled(true);
@@ -261,9 +266,9 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         String value11 = "\u20AC";
         String value12 = "\u20AA";
         String value2 = "&";
-        String paramValue11 = URLEncoder.encode(value11, "UTF-8");
-        String paramValue12 = URLEncoder.encode(value12, "UTF-8");
-        String paramValue2 = URLEncoder.encode(value2, "UTF-8");
+        String paramValue11 = URLEncoder.encode(value11, StandardCharsets.UTF_8);
+        String paramValue12 = URLEncoder.encode(value12, StandardCharsets.UTF_8);
+        String paramValue2 = URLEncoder.encode(value2, StandardCharsets.UTF_8);
         String query = paramName1 + "=" + paramValue11 + "&" + paramName1 + "=" + paramValue12 + "&" + paramName2 + "=" + paramValue2;
         ContentResponse response = client.GET(scenario.getScheme() + "://localhost:" + connector.getLocalPort() + "/?" + query);
 
@@ -275,14 +280,14 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_POST_WithParameters(Scenario scenario) throws Exception
+    public void testPOSTWithParameters(Scenario scenario) throws Exception
     {
-        final String paramName = "a";
-        final String paramValue = "\u20AC";
+        String paramName = "a";
+        String paramValue = "\u20AC";
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 String value = request.getParameter(paramName);
@@ -296,9 +301,9 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         });
 
         ContentResponse response = client.POST(scenario.getScheme() + "://localhost:" + connector.getLocalPort())
-                .param(paramName, paramValue)
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .param(paramName, paramValue)
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
@@ -307,15 +312,15 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_PUT_WithParameters(Scenario scenario) throws Exception
+    public void testPUTWithParameters(Scenario scenario) throws Exception
     {
-        final String paramName = "a";
-        final String paramValue = "\u20AC";
-        final String encodedParamValue = URLEncoder.encode(paramValue, "UTF-8");
+        String paramName = "a";
+        String paramValue = "\u20AC";
+        String encodedParamValue = URLEncoder.encode(paramValue, StandardCharsets.UTF_8);
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 String value = request.getParameter(paramName);
@@ -330,9 +335,9 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
         URI uri = URI.create(scenario.getScheme() + "://localhost:" + connector.getLocalPort() + "/path?" + paramName + "=" + encodedParamValue);
         ContentResponse response = client.newRequest(uri)
-                .method(HttpMethod.PUT)
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .method(HttpMethod.PUT)
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
@@ -341,15 +346,15 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_POST_WithParameters_WithContent(Scenario scenario) throws Exception
+    public void testPOSTWithParametersWithContent(Scenario scenario) throws Exception
     {
-        final byte[] content = {0, 1, 2, 3};
-        final String paramName = "a";
-        final String paramValue = "\u20AC";
+        byte[] content = {0, 1, 2, 3};
+        String paramName = "a";
+        String paramValue = "\u20AC";
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 consume(request.getInputStream(), true);
@@ -364,10 +369,10 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         });
 
         ContentResponse response = client.POST(scenario.getScheme() + "://localhost:" + connector.getLocalPort() + "/?b=1")
-                .param(paramName, paramValue)
-                .content(new BytesContentProvider(content))
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .param(paramName, paramValue)
+            .body(new BytesRequestContent(content))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
@@ -376,30 +381,30 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_POST_WithContent_NotifiesRequestContentListener(Scenario scenario) throws Exception
+    public void testPOSTWithContentNotifiesRequestContentListener(Scenario scenario) throws Exception
     {
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 consume(request.getInputStream(), true);
             }
         });
 
-        final byte[] content = {0, 1, 2, 3};
+        byte[] content = {0, 1, 2, 3};
         ContentResponse response = client.POST(scenario.getScheme() + "://localhost:" + connector.getLocalPort())
-                .onRequestContent((request, buffer) ->
-                {
-                    byte[] bytes = new byte[buffer.remaining()];
-                    buffer.get(bytes);
-                    if (!Arrays.equals(content, bytes))
-                        request.abort(new Exception());
-                })
-                .content(new BytesContentProvider(content))
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .onRequestContent((request, buffer) ->
+            {
+                byte[] bytes = new byte[buffer.remaining()];
+                buffer.get(bytes);
+                if (!Arrays.equals(content, bytes))
+                    request.abort(new Exception());
+            })
+            .body(new BytesRequestContent(content))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
@@ -407,30 +412,30 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_POST_WithContent_TracksProgress(Scenario scenario) throws Exception
+    public void testPOSTWithContentTracksProgress(Scenario scenario) throws Exception
     {
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 consume(request.getInputStream(), true);
             }
         });
 
-        final AtomicInteger progress = new AtomicInteger();
+        AtomicInteger progress = new AtomicInteger();
         ContentResponse response = client.POST(scenario.getScheme() + "://localhost:" + connector.getLocalPort())
-                .onRequestContent((request, buffer) ->
-                {
-                    byte[] bytes = new byte[buffer.remaining()];
-                    assertEquals(1, bytes.length);
-                    buffer.get(bytes);
-                    assertEquals(bytes[0], progress.getAndIncrement());
-                })
-                .content(new BytesContentProvider(new byte[]{0}, new byte[]{1}, new byte[]{2}, new byte[]{3}, new byte[]{4}))
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .onRequestContent((request, buffer) ->
+            {
+                byte[] bytes = new byte[buffer.remaining()];
+                assertEquals(1, bytes.length);
+                buffer.get(bytes);
+                assertEquals(bytes[0], progress.getAndIncrement());
+            })
+            .body(new BytesRequestContent(new byte[]{0}, new byte[]{1}, new byte[]{2}, new byte[]{3}, new byte[]{4}))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
@@ -439,61 +444,61 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_QueuedRequest_IsSent_WhenPreviousRequestSucceeded(Scenario scenario) throws Exception
+    public void testQueuedRequestIsSentWhenPreviousRequestSucceeded(Scenario scenario) throws Exception
     {
         start(scenario, new EmptyServerHandler());
 
         client.setMaxConnectionsPerDestination(1);
 
-        final CountDownLatch latch = new CountDownLatch(1);
-        final CountDownLatch successLatch = new CountDownLatch(2);
+        CountDownLatch latch = new CountDownLatch(1);
+        CountDownLatch successLatch = new CountDownLatch(2);
         client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .onRequestBegin(request ->
+            .scheme(scenario.getScheme())
+            .onRequestBegin(request ->
+            {
+                try
                 {
-                    try
-                    {
-                        latch.await();
-                    }
-                    catch (InterruptedException x)
-                    {
-                        x.printStackTrace();
-                    }
-                })
-                .send(new Response.Listener.Adapter()
+                    latch.await();
+                }
+                catch (InterruptedException x)
                 {
-                    @Override
-                    public void onSuccess(Response response)
-                    {
-                        assertEquals(200, response.getStatus());
-                        successLatch.countDown();
-                    }
-                });
+                    x.printStackTrace();
+                }
+            })
+            .send(new Response.Listener.Adapter()
+            {
+                @Override
+                public void onSuccess(Response response)
+                {
+                    assertEquals(200, response.getStatus());
+                    successLatch.countDown();
+                }
+            });
 
         client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .onRequestQueued(request -> latch.countDown())
-                .send(new Response.Listener.Adapter()
+            .scheme(scenario.getScheme())
+            .onRequestQueued(request -> latch.countDown())
+            .send(new Response.Listener.Adapter()
+            {
+                @Override
+                public void onSuccess(Response response)
                 {
-                    @Override
-                    public void onSuccess(Response response)
-                    {
-                        assertEquals(200, response.getStatus());
-                        successLatch.countDown();
-                    }
-                });
+                    assertEquals(200, response.getStatus());
+                    successLatch.countDown();
+                }
+            });
 
         assertTrue(successLatch.await(5, TimeUnit.SECONDS));
     }
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_QueuedRequest_IsSent_WhenPreviousRequestClosedConnection(Scenario scenario) throws Exception
+    public void testQueuedRequestIsSentWhenPreviousRequestClosedConnection(Scenario scenario) throws Exception
     {
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response)
             {
                 if (target.endsWith("/one"))
                     baseRequest.getHttpChannel().getEndPoint().close();
@@ -504,24 +509,24 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
         client.setMaxConnectionsPerDestination(1);
 
-        try (StacklessLogging stackless = new StacklessLogging(org.eclipse.jetty.server.HttpChannel.class))
+        try (StacklessLogging ignored = new StacklessLogging(org.eclipse.jetty.server.HttpChannel.class))
         {
-            final CountDownLatch latch = new CountDownLatch(2);
+            CountDownLatch latch = new CountDownLatch(2);
             client.newRequest("localhost", connector.getLocalPort())
-            .scheme(scenario.getScheme())
-            .path("/one")
-            .onResponseFailure((response, failure) -> latch.countDown())
-            .send(null);
+                .scheme(scenario.getScheme())
+                .path("/one")
+                .onResponseFailure((response, failure) -> latch.countDown())
+                .send(null);
 
             client.newRequest("localhost", connector.getLocalPort())
-            .scheme(scenario.getScheme())
-            .path("/two")
-            .onResponseSuccess(response ->
-            {
-                assertEquals(200, response.getStatus());
-                latch.countDown();
-            })
-            .send(null);
+                .scheme(scenario.getScheme())
+                .path("/two")
+                .onResponseSuccess(response ->
+                {
+                    assertEquals(200, response.getStatus());
+                    latch.countDown();
+                })
+                .send(null);
 
             assertTrue(latch.await(5, TimeUnit.SECONDS));
         }
@@ -529,12 +534,12 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_ExchangeIsComplete_OnlyWhenBothRequestAndResponseAreComplete(Scenario scenario) throws Exception
+    public void testExchangeIsCompleteOnlyWhenBothRequestAndResponseAreComplete(Scenario scenario) throws Exception
     {
-        start(scenario,new AbstractHandler.ErrorDispatchHandler()
+        start(scenario, new AbstractHandler()
         {
             @Override
-            protected void doNonErrorHandle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 response.setContentLength(0);
@@ -543,7 +548,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
                 byte[] buffer = new byte[1024];
                 InputStream in = request.getInputStream();
-                while(true)
+                while (true)
                 {
                     int read = in.read(buffer);
                     if (read < 0)
@@ -560,21 +565,23 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         {
             byte[] kb = new byte[1024];
             for (int i = 0; i < 10 * 1024; ++i)
+            {
                 output.write(kb);
+            }
         }
 
-        final CountDownLatch latch = new CountDownLatch(3);
-        final AtomicLong exchangeTime = new AtomicLong();
-        final AtomicLong requestTime = new AtomicLong();
-        final AtomicLong responseTime = new AtomicLong();
+        CountDownLatch latch = new CountDownLatch(3);
+        AtomicLong exchangeTime = new AtomicLong();
+        AtomicLong requestTime = new AtomicLong();
+        AtomicLong responseTime = new AtomicLong();
         client.newRequest("localhost", connector.getLocalPort())
             .scheme(scenario.getScheme())
             .file(file)
             .onRequestSuccess(request ->
-                              {
-                                  requestTime.set(System.nanoTime());
-                                  latch.countDown();
-                              })
+            {
+                requestTime.set(System.nanoTime());
+                latch.countDown();
+            })
             .send(new Response.Listener.Adapter()
             {
                 @Override
@@ -604,95 +611,81 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         Files.delete(file);
     }
 
-
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_ExchangeIsComplete_WhenRequestFailsMidway_WithResponse(Scenario scenario) throws Exception
+    public void testExchangeIsCompleteWhenRequestFailsMidwayWithResponse(Scenario scenario) throws Exception
     {
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 // Echo back
                 IO.copy(request.getInputStream(), response.getOutputStream());
             }
         });
 
-        final CountDownLatch latch = new CountDownLatch(1);
+        CountDownLatch latch = new CountDownLatch(1);
         client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                // The second ByteBuffer set to null will throw an exception
-                .content(new ContentProvider()
+            .scheme(scenario.getScheme())
+            .body(new AbstractRequestContent("application/octet-stream")
+            {
+                @Override
+                protected Subscription newSubscription(Consumer consumer, boolean emitInitialContent)
                 {
-                    @Override
-                    public long getLength()
+                    return new AbstractSubscription(consumer, emitInitialContent)
                     {
-                        return -1;
-                    }
+                        private int count;
 
-                    @Override
-                    public Iterator<ByteBuffer> iterator()
-                    {
-                        return new Iterator<ByteBuffer>()
+                        @Override
+                        protected boolean produceContent(Producer producer) throws Exception
                         {
-                            @Override
-                            public boolean hasNext()
-                            {
-                                return true;
-                            }
-
-                            @Override
-                            public ByteBuffer next()
-                            {
-                                throw new NoSuchElementException("explicitly_thrown_by_test");
-                            }
-
-                            @Override
-                            public void remove()
-                            {
-                                throw new UnsupportedOperationException();
-                            }
-                        };
-                    }
-                })
-                .send(new Response.Listener.Adapter()
+                            if (count == 2)
+                                throw new IOException("explicitly_thrown_by_test");
+                            ByteBuffer buffer = BufferUtil.allocate(512);
+                            ++count;
+                            return producer.produce(buffer, false, Callback.NOOP);
+                        }
+                    };
+                }
+            })
+            .send(new Response.Listener.Adapter()
+            {
+                @Override
+                public void onComplete(Result result)
                 {
-                    @Override
-                    public void onComplete(Result result)
-                    {
-                        latch.countDown();
-                    }
-                });
+                    latch.countDown();
+                }
+            });
 
         assertTrue(latch.await(5, TimeUnit.SECONDS));
     }
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_ExchangeIsComplete_WhenRequestFails_WithNoResponse(Scenario scenario) throws Exception
+    public void testExchangeIsCompleteWhenRequestFailsWithNoResponse(Scenario scenario) throws Exception
     {
         start(scenario, new EmptyServerHandler());
 
-        final CountDownLatch latch = new CountDownLatch(1);
-        final String host = "localhost";
-        final int port = connector.getLocalPort();
+        CountDownLatch latch = new CountDownLatch(1);
+        String host = "localhost";
+        int port = connector.getLocalPort();
         client.newRequest(host, port)
-                .scheme(scenario.getScheme())
-                .onRequestBegin(request ->
+            .scheme(scenario.getScheme())
+            .onRequestBegin(r ->
+            {
+                HttpDestination destination = (HttpDestination)client.resolveDestination(r);
+                DuplexConnectionPool connectionPool = (DuplexConnectionPool)destination.getConnectionPool();
+                connectionPool.getActiveConnections().iterator().next().close();
+            })
+            .send(new Response.Listener.Adapter()
+            {
+                @Override
+                public void onComplete(Result result)
                 {
-                    HttpDestinationOverHTTP destination = (HttpDestinationOverHTTP)client.getDestination(scenario.getScheme(), host, port);
-                    DuplexConnectionPool connectionPool = (DuplexConnectionPool)destination.getConnectionPool();
-                    connectionPool.getActiveConnections().iterator().next().close();
-                })
-                .send(new Response.Listener.Adapter()
-                {
-                    @Override
-                    public void onComplete(Result result)
-                    {
-                        latch.countDown();
-                    }
-                });
+                    latch.countDown();
+                }
+            });
 
         assertTrue(latch.await(5, TimeUnit.SECONDS));
     }
@@ -700,13 +693,13 @@ public class HttpClientTest extends AbstractHttpClientServerTest
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
     @DisabledIfSystemProperty(named = "env", matches = "ci") // TODO: SLOW, needs review
-    public void test_Request_IdleTimeout(Scenario scenario) throws Exception
+    public void testRequestIdleTimeout(Scenario scenario) throws Exception
     {
-        final long idleTimeout = 1000;
+        long idleTimeout = 1000;
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws ServletException
             {
                 try
                 {
@@ -720,21 +713,20 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             }
         });
 
-        final String host = "localhost";
-        final int port = connector.getLocalPort();
-        assertThrows(TimeoutException.class, ()->{
+        String host = "localhost";
+        int port = connector.getLocalPort();
+        assertThrows(TimeoutException.class, () ->
             client.newRequest(host, port)
-                    .scheme(scenario.getScheme())
-                    .idleTimeout(idleTimeout, TimeUnit.MILLISECONDS)
-                    .timeout(3 * idleTimeout, TimeUnit.MILLISECONDS)
-                    .send();
-        });
+                .scheme(scenario.getScheme())
+                .idleTimeout(idleTimeout, TimeUnit.MILLISECONDS)
+                .timeout(3 * idleTimeout, TimeUnit.MILLISECONDS)
+                .send());
 
         // Make another request without specifying the idle timeout, should not fail
         ContentResponse response = client.newRequest(host, port)
-                .scheme(scenario.getScheme())
-                .timeout(3 * idleTimeout, TimeUnit.MILLISECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .timeout(3 * idleTimeout, TimeUnit.MILLISECONDS)
+            .send();
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
@@ -744,12 +736,13 @@ public class HttpClientTest extends AbstractHttpClientServerTest
     @ArgumentsSource(ScenarioProvider.class)
     public void testSendToIPv6Address(Scenario scenario) throws Exception
     {
+        Assumptions.assumeTrue(Net.isIpv6InterfaceAvailable());
         start(scenario, new EmptyServerHandler());
 
         ContentResponse response = client.newRequest("[::1]", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
@@ -759,11 +752,11 @@ public class HttpClientTest extends AbstractHttpClientServerTest
     @ArgumentsSource(ScenarioProvider.class)
     public void testHeaderProcessing(Scenario scenario) throws Exception
     {
-        final String headerName = "X-Header-Test";
+        String headerName = "X-Header-Test";
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response)
             {
                 baseRequest.setHandled(true);
                 response.setHeader(headerName, "X");
@@ -771,14 +764,14 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         });
 
         ContentResponse response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .onResponseHeader((response1, field) -> !field.getName().equals(headerName))
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .onResponseHeader((response1, field) -> !field.getName().equals(headerName))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
-        assertFalse(response.getHeaders().containsKey(headerName));
+        assertFalse(response.getHeaders().contains(headerName));
     }
 
     @ParameterizedTest
@@ -788,26 +781,26 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         start(scenario, new EmptyServerHandler());
 
         int count = 10;
-        final CountDownLatch latch = new CountDownLatch(count);
+        CountDownLatch latch = new CountDownLatch(count);
         for (int i = 0; i < count; ++i)
         {
             client.newRequest("localhost", connector.getLocalPort())
-                    .scheme(scenario.getScheme())
-                    .send(new Response.Listener.Adapter()
+                .scheme(scenario.getScheme())
+                .send(new Response.Listener.Adapter()
+                {
+                    @Override
+                    public boolean onHeader(Response response, HttpField field)
                     {
-                        @Override
-                        public boolean onHeader(Response response, HttpField field)
-                        {
-                            return false;
-                        }
+                        return false;
+                    }
 
-                        @Override
-                        public void onComplete(Result result)
-                        {
-                            if (result.isSucceeded())
-                                latch.countDown();
-                        }
-                    });
+                    @Override
+                    public void onComplete(Result result)
+                    {
+                        if (result.isSucceeded())
+                            latch.countDown();
+                    }
+                });
         }
 
         assertTrue(latch.await(10, TimeUnit.SECONDS));
@@ -815,13 +808,13 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_HEAD_With_ResponseContentLength(Scenario scenario) throws Exception
+    public void testHEADWithResponseContentLength(Scenario scenario) throws Exception
     {
-        final int length = 1024;
+        int length = 1024;
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 response.getOutputStream().write(new byte[length]);
@@ -831,10 +824,10 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         // HEAD requests receive a Content-Length header, but do not
         // receive the content so they must handle this case properly
         ContentResponse response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .method(HttpMethod.HEAD)
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .method(HttpMethod.HEAD)
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
@@ -842,9 +835,9 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
         // Perform a normal GET request to be sure the content is now read
         response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
@@ -858,22 +851,23 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         String host = "idontexist";
         int port = 80;
 
-        assertThrows(IOException.class, ()->{
+        assertThrows(IOException.class, () ->
+        {
             Socket socket = new Socket();
             socket.connect(new InetSocketAddress(host, port), 1000);
         }, "Host must not be resolvable");
 
         start(scenario, new EmptyServerHandler());
 
-        final CountDownLatch latch = new CountDownLatch(1);
+        CountDownLatch latch = new CountDownLatch(1);
         client.newRequest(host, port)
-                .send(result ->
-                {
-                    assertTrue(result.isFailed());
-                    Throwable failure = result.getFailure();
-                    assertTrue(failure instanceof UnknownHostException);
-                    latch.countDown();
-                });
+            .send(result ->
+            {
+                assertTrue(result.isFailed());
+                Throwable failure = result.getFailure();
+                assertTrue(failure instanceof UnknownHostException);
+                latch.countDown();
+            });
         assertTrue(latch.await(10, TimeUnit.SECONDS));
     }
 
@@ -882,14 +876,14 @@ public class HttpClientTest extends AbstractHttpClientServerTest
     public void testConnectHostWithMultipleAddresses(Scenario scenario) throws Exception
     {
         startServer(scenario, new EmptyServerHandler());
-        startClient(scenario, null, client ->
+        startClient(scenario, client ->
         {
             client.setSocketAddressResolver(new SocketAddressResolver.Async(client.getExecutor(), client.getScheduler(), 5000)
             {
                 @Override
                 public void resolve(String host, int port, Promise<List<InetSocketAddress>> promise)
                 {
-                    super.resolve(host, port, new Promise<List<InetSocketAddress>>()
+                    super.resolve(host, port, new Promise<>()
                     {
                         @Override
                         public void succeeded(List<InetSocketAddress> result)
@@ -912,20 +906,20 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
         // If no exceptions the test passes.
         client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .header(HttpHeader.CONNECTION, "close")
-                .send();
+            .scheme(scenario.getScheme())
+            .headers(headers -> headers.put(HttpHeader.CONNECTION, HttpHeaderValue.CLOSE))
+            .send();
     }
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
     public void testCustomUserAgent(Scenario scenario) throws Exception
     {
-        final String userAgent = "Test/1.0";
+        String userAgent = "Test/1.0";
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response)
             {
                 baseRequest.setHandled(true);
                 ArrayList<String> userAgents = Collections.list(request.getHeaders("User-Agent"));
@@ -935,19 +929,18 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         });
 
         ContentResponse response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .agent(userAgent)
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .agent(userAgent)
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
 
         response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .header(HttpHeader.USER_AGENT, null)
-                .header(HttpHeader.USER_AGENT, userAgent)
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .headers(headers -> headers.put(HttpHeader.USER_AGENT, userAgent))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
     }
@@ -959,7 +952,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response)
             {
                 baseRequest.setHandled(true);
                 ArrayList<String> userAgents = Collections.list(request.getHeaders("User-Agent"));
@@ -972,28 +965,28 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
         // User agent not specified, use default.
         ContentResponse response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .path("/ua")
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .path("/ua")
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
 
         // User agent explicitly removed.
         response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .agent(null)
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .agent(null)
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
 
         // User agent explicitly removed.
         response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .header(HttpHeader.USER_AGENT, null)
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .headers(headers -> headers.remove(HttpHeader.USER_AGENT))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
     }
@@ -1004,7 +997,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
     {
         start(scenario, new EmptyServerHandler());
 
-        final AtomicInteger counter = new AtomicInteger();
+        AtomicInteger counter = new AtomicInteger();
         Request.Listener listener = new Request.Listener()
         {
             @Override
@@ -1052,16 +1045,16 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             }
         };
         ContentResponse response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .onRequestQueued(listener)
-                .onRequestBegin(listener)
-                .onRequestHeaders(listener)
-                .onRequestCommit(listener)
-                .onRequestContent(listener)
-                .onRequestSuccess(listener)
-                .onRequestFailure(listener)
-                .listener(listener)
-                .send();
+            .scheme(scenario.getScheme())
+            .onRequestQueued(listener)
+            .onRequestBegin(listener)
+            .onRequestHeaders(listener)
+            .onRequestCommit(listener)
+            .onRequestContent(listener)
+            .onRequestSuccess(listener)
+            .onRequestFailure(listener)
+            .listener(listener)
+            .send();
 
         assertEquals(200, response.getStatus());
         int expectedEventsTriggeredByOnRequestXXXListeners = 5;
@@ -1076,8 +1069,8 @@ public class HttpClientTest extends AbstractHttpClientServerTest
     {
         start(scenario, new EmptyServerHandler());
 
-        final AtomicInteger counter = new AtomicInteger();
-        final CountDownLatch latch = new CountDownLatch(1);
+        AtomicInteger counter = new AtomicInteger();
+        CountDownLatch latch = new CountDownLatch(1);
         Response.Listener listener = new Response.Listener()
         {
             @Override
@@ -1114,6 +1107,13 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             }
 
             @Override
+            public void onContent(Response response, LongConsumer demand, ByteBuffer content, Callback callback)
+            {
+                // Should not be invoked
+                counter.incrementAndGet();
+            }
+
+            @Override
             public void onSuccess(Response response)
             {
                 counter.incrementAndGet();
@@ -1135,15 +1135,15 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             }
         };
         client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .onResponseBegin(listener)
-                .onResponseHeader(listener)
-                .onResponseHeaders(listener)
-                .onResponseContent(listener)
-                .onResponseContentAsync(listener)
-                .onResponseSuccess(listener)
-                .onResponseFailure(listener)
-                .send(listener);
+            .scheme(scenario.getScheme())
+            .onResponseBegin(listener)
+            .onResponseHeader(listener)
+            .onResponseHeaders(listener)
+            .onResponseContent(listener)
+            .onResponseContentAsync(listener)
+            .onResponseSuccess(listener)
+            .onResponseFailure(listener)
+            .send(listener);
 
         assertTrue(latch.await(5, TimeUnit.SECONDS));
         int expectedEventsTriggeredByOnResponseXXXListeners = 3;
@@ -1156,19 +1156,19 @@ public class HttpClientTest extends AbstractHttpClientServerTest
     @ArgumentsSource(ScenarioProvider.class)
     public void setOnCompleteCallbackWithBlockingSend(Scenario scenario) throws Exception
     {
-        final byte[] content = new byte[512];
+        byte[] content = new byte[512];
         new Random().nextBytes(content);
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 response.getOutputStream().write(content);
             }
         });
 
-        final Exchanger<Response> ex = new Exchanger<>();
+        Exchanger<Response> ex = new Exchanger<>();
         BufferingResponseListener listener = new BufferingResponseListener()
         {
             @Override
@@ -1185,27 +1185,25 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             }
         };
 
-
         client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .send(listener);
+            .scheme(scenario.getScheme())
+            .send(listener);
 
         Response response = ex.exchange(null);
 
         assertEquals(200, response.getStatus());
         assertArrayEquals(content, listener.getContent());
-
     }
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
     public void testCustomHostHeader(Scenario scenario) throws Exception
     {
-        final String host = "localhost";
+        String host = "localhost";
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response)
             {
                 baseRequest.setHandled(true);
                 assertEquals(host, request.getServerName());
@@ -1213,9 +1211,9 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         });
 
         ContentResponse response = client.newRequest("http://127.0.0.1:" + connector.getLocalPort() + "/path")
-                .scheme(scenario.getScheme())
-                .header(HttpHeader.HOST, host)
-                .send();
+            .scheme(scenario.getScheme())
+            .headers(headers -> headers.put(HttpHeader.HOST, host))
+            .send();
 
         assertEquals(200, response.getStatus());
     }
@@ -1227,10 +1225,10 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 // Send the headers at this point, then write the content
-                byte[] content = "TEST".getBytes("UTF-8");
+                byte[] content = "TEST".getBytes(StandardCharsets.UTF_8);
                 response.setContentLength(content.length);
                 response.flushBuffer();
                 response.getOutputStream().write(content);
@@ -1238,11 +1236,11 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         });
 
         ContentResponse response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .version(HttpVersion.HTTP_1_0)
-                .header(HttpHeader.CONNECTION, HttpHeaderValue.KEEP_ALIVE.asString())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .version(HttpVersion.HTTP_1_0)
+            .headers(headers -> headers.put(HttpHeader.CONNECTION, HttpHeaderValue.KEEP_ALIVE.asString()))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
         assertTrue(response.getHeaders().contains(HttpHeader.CONNECTION, HttpHeaderValue.KEEP_ALIVE.asString()));
@@ -1255,7 +1253,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 // Send the headers at this point, then write the content
                 response.flushBuffer();
@@ -1263,18 +1261,17 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             }
         });
 
+        long timeout = 5000;
+        Request request = client.newRequest("localhost", connector.getLocalPort())
+            .scheme(scenario.getScheme())
+            .version(HttpVersion.HTTP_1_0)
+            .headers(headers -> headers.put(HttpHeader.CONNECTION, HttpHeaderValue.KEEP_ALIVE.asString()))
+            .timeout(timeout, TimeUnit.MILLISECONDS);
         FuturePromise<Connection> promise = new FuturePromise<>();
-        Destination destination = client.getDestination(scenario.getScheme(), "localhost", connector.getLocalPort());
+        Destination destination = client.resolveDestination(request);
         destination.newConnection(promise);
         try (Connection connection = promise.get(5, TimeUnit.SECONDS))
         {
-            long timeout = 5000;
-            Request request = client.newRequest(destination.getHost(), destination.getPort())
-                    .scheme(destination.getScheme())
-                    .version(HttpVersion.HTTP_1_0)
-                    .header(HttpHeader.CONNECTION, HttpHeaderValue.KEEP_ALIVE.asString())
-                    .timeout(timeout, TimeUnit.MILLISECONDS);
-
             FutureResponseListener listener = new FutureResponseListener(request);
             connection.send(request, listener);
             ContentResponse response = listener.get(2 * timeout, TimeUnit.MILLISECONDS);
@@ -1295,11 +1292,11 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         start(scenario, new EmptyServerHandler());
 
         ContentResponse response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .version(HttpVersion.HTTP_1_0)
-                .header(HttpHeader.CONNECTION, HttpHeaderValue.KEEP_ALIVE.asString())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .version(HttpVersion.HTTP_1_0)
+            .headers(headers -> headers.put(HttpHeader.CONNECTION, HttpHeaderValue.KEEP_ALIVE.asString()))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
         assertTrue(response.getHeaders().contains(HttpHeader.CONNECTION, HttpHeaderValue.KEEP_ALIVE.asString()));
@@ -1309,11 +1306,11 @@ public class HttpClientTest extends AbstractHttpClientServerTest
     @ArgumentsSource(ScenarioProvider.class)
     public void testLongPollIsAbortedWhenClientIsStopped(Scenario scenario) throws Exception
     {
-        final CountDownLatch latch = new CountDownLatch(1);
+        CountDownLatch latch = new CountDownLatch(1);
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response)
             {
                 baseRequest.setHandled(true);
                 request.startAsync();
@@ -1321,14 +1318,14 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             }
         });
 
-        final CountDownLatch completeLatch = new CountDownLatch(1);
+        CountDownLatch completeLatch = new CountDownLatch(1);
         client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .send(result ->
-                {
-                    if (result.isFailed())
-                        completeLatch.countDown();
-                });
+            .scheme(scenario.getScheme())
+            .send(result ->
+            {
+                if (result.isFailed())
+                    completeLatch.countDown();
+            });
 
         assertTrue(latch.await(5, TimeUnit.SECONDS));
 
@@ -1340,13 +1337,12 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void testSmallContentDelimitedByEOFWithSlowRequestHTTP10(Scenario scenario) throws Exception
+    public void testSmallContentDelimitedByEOFWithSlowRequestHTTP10(Scenario scenario)
     {
         Assumptions.assumeTrue(HttpScheme.HTTP.is(scenario.getScheme()));
 
-        ExecutionException e = assertThrows(ExecutionException.class, ()->{
-            testContentDelimitedByEOFWithSlowRequest(scenario, HttpVersion.HTTP_1_0, 1024);
-        });
+        ExecutionException e = assertThrows(ExecutionException.class, () ->
+            testContentDelimitedByEOFWithSlowRequest(scenario, HttpVersion.HTTP_1_0, 1024));
 
         assertThat(e.getCause(), instanceOf(BadMessageException.class));
         assertThat(e.getCause().getMessage(), containsString("Unknown content"));
@@ -1354,11 +1350,10 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(NonSslScenarioProvider.class)
-    public void testBigContentDelimitedByEOFWithSlowRequestHTTP10(Scenario scenario) throws Exception
+    public void testBigContentDelimitedByEOFWithSlowRequestHTTP10(Scenario scenario)
     {
-        ExecutionException e = assertThrows(ExecutionException.class, ()->{
-            testContentDelimitedByEOFWithSlowRequest(scenario, HttpVersion.HTTP_1_0, 128 * 1024);
-        });
+        ExecutionException e = assertThrows(ExecutionException.class, () ->
+            testContentDelimitedByEOFWithSlowRequest(scenario, HttpVersion.HTTP_1_0, 128 * 1024));
 
         assertThat(e.getCause(), instanceOf(BadMessageException.class));
         assertThat(e.getCause().getMessage(), containsString("Unknown content"));
@@ -1378,7 +1373,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         testContentDelimitedByEOFWithSlowRequest(scenario, HttpVersion.HTTP_1_1, 128 * 1024);
     }
 
-    private void testContentDelimitedByEOFWithSlowRequest(final Scenario scenario, final HttpVersion version, int length) throws Exception
+    private void testContentDelimitedByEOFWithSlowRequest(Scenario scenario, HttpVersion version, int length) throws Exception
     {
         // This test is crafted in a way that the response completes before the request is fully written.
         // With SSL, the response coming down will close the SSLEngine so it would not be possible to
@@ -1387,12 +1382,12 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         // This is a limit of Java's SSL implementation that does not allow half closes.
         Assumptions.assumeTrue(HttpScheme.HTTP.is(scenario.getScheme()));
 
-        final byte[] data = new byte[length];
+        byte[] data = new byte[length];
         new Random().nextBytes(data);
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 // Send Connection: close to avoid that the server chunks the content with HTTP 1.1.
@@ -1402,11 +1397,11 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             }
         });
 
-        DeferredContentProvider content = new DeferredContentProvider(ByteBuffer.wrap(new byte[]{0}));
+        AsyncRequestContent content = new AsyncRequestContent(ByteBuffer.wrap(new byte[]{0}));
         Request request = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .version(version)
-                .content(content);
+            .scheme(scenario.getScheme())
+            .version(version)
+            .body(content);
         FutureResponseListener listener = new FutureResponseListener(request);
         request.send(listener);
         // Wait some time to simulate a slow request.
@@ -1423,12 +1418,12 @@ public class HttpClientTest extends AbstractHttpClientServerTest
     @ArgumentsSource(ScenarioProvider.class)
     public void testRequestRetries(Scenario scenario) throws Exception
     {
-        final int maxRetries = 3;
-        final AtomicInteger requests = new AtomicInteger();
+        int maxRetries = 3;
+        AtomicInteger requests = new AtomicInteger();
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 int count = requests.incrementAndGet();
                 if (count == maxRetries)
@@ -1437,7 +1432,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             }
         });
 
-        final CountDownLatch latch = new CountDownLatch(1);
+        CountDownLatch latch = new CountDownLatch(1);
         new RetryListener(client, scenario.getScheme(), "localhost", connector.getLocalPort(), maxRetries)
         {
             @Override
@@ -1457,7 +1452,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 ServletOutputStream output = response.getOutputStream();
@@ -1465,28 +1460,28 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             }
         });
 
-        final AtomicReference<Callback> callbackRef = new AtomicReference<>();
-        final CountDownLatch contentLatch = new CountDownLatch(1);
-        final CountDownLatch completeLatch = new CountDownLatch(1);
+        AtomicReference<Callback> callbackRef = new AtomicReference<>();
+        CountDownLatch contentLatch = new CountDownLatch(1);
+        CountDownLatch completeLatch = new CountDownLatch(1);
         client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .send(new Response.Listener.Adapter()
+            .scheme(scenario.getScheme())
+            .send(new Response.Listener.Adapter()
+            {
+                @Override
+                public void onContent(Response response, ByteBuffer content, Callback callback)
                 {
-                    @Override
-                    public void onContent(Response response, ByteBuffer content, Callback callback)
-                    {
-                        // Do not notify the callback yet.
-                        callbackRef.set(callback);
-                        contentLatch.countDown();
-                    }
+                    // Do not notify the callback yet.
+                    callbackRef.set(callback);
+                    contentLatch.countDown();
+                }
 
-                    @Override
-                    public void onComplete(Result result)
-                    {
-                        if (result.isSucceeded())
-                            completeLatch.countDown();
-                    }
-                });
+                @Override
+                public void onComplete(Result result)
+                {
+                    if (result.isSucceeded())
+                        completeLatch.countDown();
+                }
+            });
 
         assertTrue(contentLatch.await(5, TimeUnit.SECONDS));
 
@@ -1507,19 +1502,21 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         startServer(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response)
             {
                 baseRequest.setHandled(true);
             }
         });
 
-        final AtomicBoolean open = new AtomicBoolean();
-        client = new HttpClient(new HttpClientTransportOverHTTP()
+        AtomicBoolean open = new AtomicBoolean();
+        ClientConnector clientConnector = new ClientConnector();
+        clientConnector.setSslContextFactory(scenario.newClientSslContextFactory());
+        client = new HttpClient(new HttpClientTransportOverHTTP(clientConnector)
         {
             @Override
-            protected HttpConnectionOverHTTP newHttpConnection(EndPoint endPoint, HttpDestination destination, Promise<Connection> promise)
+            public org.eclipse.jetty.io.Connection newConnection(EndPoint endPoint, Map<String, Object> context)
             {
-                return new HttpConnectionOverHTTP(endPoint, destination, promise)
+                return new HttpConnectionOverHTTP(endPoint, context)
                 {
                     @Override
                     public void onOpen()
@@ -1529,22 +1526,22 @@ public class HttpClientTest extends AbstractHttpClientServerTest
                     }
                 };
             }
-        }, scenario.newSslContextFactory());
+        });
         client.start();
 
-        final CountDownLatch latch = new CountDownLatch(2);
+        CountDownLatch latch = new CountDownLatch(2);
         client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .onRequestBegin(request ->
-                {
-                    assertTrue(open.get());
+            .scheme(scenario.getScheme())
+            .onRequestBegin(request ->
+            {
+                assertTrue(open.get());
+                latch.countDown();
+            })
+            .send(result ->
+            {
+                if (result.isSucceeded())
                     latch.countDown();
-                })
-                .send(result ->
-                {
-                    if (result.isSucceeded())
-                        latch.countDown();
-                });
+            });
 
         assertTrue(latch.await(5, TimeUnit.SECONDS));
     }
@@ -1561,10 +1558,10 @@ public class HttpClientTest extends AbstractHttpClientServerTest
             int port = server.getLocalPort();
 
             Request request = client.newRequest(host, port)
-                    .method(HttpMethod.CONNECT)
-                    .version(HttpVersion.HTTP_1_0);
+                .method(HttpMethod.CONNECT)
+                .version(HttpVersion.HTTP_1_0);
             FuturePromise<Connection> promise = new FuturePromise<>();
-            client.getDestination("http", host, port).newConnection(promise);
+            client.resolveDestination(request).newConnection(promise);
             Connection connection = promise.get(5, TimeUnit.SECONDS);
             FutureResponseListener listener = new FutureResponseListener(request);
             connection.send(request, listener);
@@ -1575,8 +1572,8 @@ public class HttpClientTest extends AbstractHttpClientServerTest
                 consume(input, false);
 
                 // HTTP/1.0 response, the client must not close the connection.
-                String httpResponse = "" +
-                        "HTTP/1.0 200 OK\r\n" +
+                String httpResponse =
+                    "HTTP/1.0 200 OK\r\n" +
                         "\r\n";
                 OutputStream output = socket.getOutputStream();
                 output.write(httpResponse.getBytes(StandardCharsets.UTF_8));
@@ -1597,8 +1594,8 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
                 consume(input, false);
 
-                httpResponse = "" +
-                        "HTTP/1.1 200 OK\r\n" +
+                httpResponse =
+                    "HTTP/1.1 200 OK\r\n" +
                         "Content-Length: 0\r\n" +
                         "\r\n";
                 output.write(httpResponse.getBytes(StandardCharsets.UTF_8));
@@ -1611,12 +1608,13 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
     @ParameterizedTest
     @ArgumentsSource(ScenarioProvider.class)
-    public void test_IPv6_Host(Scenario scenario) throws Exception
+    public void testIPv6Host(Scenario scenario) throws Exception
     {
+        Assumptions.assumeTrue(Net.isIpv6InterfaceAvailable());
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 baseRequest.setHandled(true);
                 response.setContentType("text/plain");
@@ -1632,7 +1630,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
         assertNotNull(response);
         assertEquals(200, response.getStatus());
-        assertThat(new String(response.getContent(), StandardCharsets.ISO_8859_1),Matchers.startsWith("[::1]:"));
+        assertThat(new String(response.getContent(), StandardCharsets.ISO_8859_1), Matchers.startsWith("[::1]:"));
     }
 
     @ParameterizedTest
@@ -1642,46 +1640,46 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         startClient(scenario);
 
         assertCopyRequest(client.newRequest("http://example.com/some/url")
-                .method(HttpMethod.HEAD)
-                .version(HttpVersion.HTTP_2)
-                .content(new StringContentProvider("some string"))
-                .timeout(321, TimeUnit.SECONDS)
-                .idleTimeout(2221, TimeUnit.SECONDS)
-                .followRedirects(true)
-                .header(HttpHeader.CONTENT_TYPE, "application/json")
-                .header("X-Some-Custom-Header", "some-value"));
+            .method(HttpMethod.HEAD)
+            .version(HttpVersion.HTTP_2)
+            .body(new StringRequestContent("some string"))
+            .timeout(321, TimeUnit.SECONDS)
+            .idleTimeout(2221, TimeUnit.SECONDS)
+            .followRedirects(true)
+            .headers(headers -> headers.put(HttpHeader.CONTENT_TYPE, "application/json"))
+            .headers(headers -> headers.put("X-Some-Custom-Header", "some-value")));
 
         assertCopyRequest(client.newRequest("https://example.com")
-                .method(HttpMethod.POST)
-                .version(HttpVersion.HTTP_1_0)
-                .content(new StringContentProvider("some other string"))
-                .timeout(123231, TimeUnit.SECONDS)
-                .idleTimeout(232342, TimeUnit.SECONDS)
-                .followRedirects(false)
-                .header(HttpHeader.ACCEPT, "application/json")
-                .header("X-Some-Other-Custom-Header", "some-other-value"));
+            .method(HttpMethod.POST)
+            .version(HttpVersion.HTTP_1_0)
+            .body(new StringRequestContent("some other string"))
+            .timeout(123231, TimeUnit.SECONDS)
+            .idleTimeout(232342, TimeUnit.SECONDS)
+            .followRedirects(false)
+            .headers(headers -> headers.put(HttpHeader.ACCEPT, "application/json"))
+            .headers(headers -> headers.put("X-Some-Other-Custom-Header", "some-other-value")));
 
         assertCopyRequest(client.newRequest("https://example.com")
-                .header(HttpHeader.ACCEPT, "application/json")
-                .header(HttpHeader.ACCEPT, "application/xml")
-                .header("x-same-name", "value1")
-                .header("x-same-name", "value2"));
+            .headers(headers -> headers.add(HttpHeader.ACCEPT, "application/json"))
+            .headers(headers -> headers.add(HttpHeader.ACCEPT, "application/xml"))
+            .headers(headers -> headers.add("x-same-name", "value1"))
+            .headers(headers -> headers.add("x-same-name", "value2")));
 
         assertCopyRequest(client.newRequest("https://example.com")
-                .header(HttpHeader.ACCEPT, "application/json")
-                .header(HttpHeader.CONTENT_TYPE, "application/json"));
+            .headers(headers -> headers.put(HttpHeader.ACCEPT, "application/json"))
+            .headers(headers -> headers.put(HttpHeader.CONTENT_TYPE, "application/json")));
 
         assertCopyRequest(client.newRequest("https://example.com")
-                .header("Accept", "application/json")
-                .header("Content-Type", "application/json"));
+            .headers(headers -> headers.put("Accept", "application/json"))
+            .headers(headers -> headers.put("Content-Type", "application/json")));
 
         assertCopyRequest(client.newRequest("https://example.com")
-                .header("X-Custom-Header-1", "value1")
-                .header("X-Custom-Header-2", "value2"));
+            .headers(headers -> headers.put("X-Custom-Header-1", "value1"))
+            .headers(headers -> headers.put("X-Custom-Header-2", "value2")));
 
         assertCopyRequest(client.newRequest("https://example.com")
-                .header("X-Custom-Header-1", "value")
-                .header("X-Custom-Header-2", "value"));
+            .headers(headers -> headers.put("X-Custom-Header-1", "value"))
+            .headers(headers -> headers.put("X-Custom-Header-2", "value")));
     }
 
     @ParameterizedTest
@@ -1691,7 +1689,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         start(scenario, new AbstractHandler()
         {
             @Override
-            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response)
             {
                 baseRequest.setHandled(true);
                 assertThat(request.getHeader("Host"), Matchers.notNullValue());
@@ -1699,10 +1697,10 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         });
 
         ContentResponse response = client.newRequest("localhost", connector.getLocalPort())
-                .scheme(scenario.getScheme())
-                .version(HttpVersion.HTTP_1_0)
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .scheme(scenario.getScheme())
+            .version(HttpVersion.HTTP_1_0)
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
     }
@@ -1717,15 +1715,15 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         try (ServerSocket server = new ServerSocket(0))
         {
             int idleTimeout = 2000;
-            startClient(scenario, null, httpClient ->
+            startClient(scenario, httpClient ->
             {
                 httpClient.setMaxConnectionsPerDestination(1);
                 httpClient.setIdleTimeout(idleTimeout);
             });
 
             Request request = client.newRequest("localhost", server.getLocalPort())
-                    .scheme(scenario.getScheme())
-                    .timeout(5, TimeUnit.SECONDS);
+                .scheme(scenario.getScheme())
+                .timeout(5, TimeUnit.SECONDS);
             FutureResponseListener listener = new FutureResponseListener(request);
             request.send(listener);
 
@@ -1737,8 +1735,8 @@ public class HttpClientTest extends AbstractHttpClientServerTest
                 consume(input, false);
 
                 // Send a bad response.
-                String httpResponse = "" +
-                        "HTTP/1.1 204 No Content\r\n" +
+                String httpResponse =
+                    "HTTP/1.1 204 No Content\r\n" +
                         "\r\n" +
                         "No Content";
                 OutputStream output = socket.getOutputStream();
@@ -1754,15 +1752,15 @@ public class HttpClientTest extends AbstractHttpClientServerTest
 
                 // Send another request to verify we have handled the wrong response correctly.
                 request = client.newRequest("localhost", server.getLocalPort())
-                        .scheme(scenario.getScheme())
-                        .timeout(5, TimeUnit.SECONDS);
+                    .scheme(scenario.getScheme())
+                    .timeout(5, TimeUnit.SECONDS);
                 listener = new FutureResponseListener(request);
                 request.send(listener);
 
                 consume(input, false);
 
-                httpResponse = "" +
-                        "HTTP/1.1 200 OK\r\n" +
+                httpResponse =
+                    "HTTP/1.1 200 OK\r\n" +
                         "Content-Length: 0\r\n" +
                         "\r\n";
                 output.write(httpResponse.getBytes(StandardCharsets.UTF_8));
@@ -1774,13 +1772,64 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         }
     }
 
+    @ParameterizedTest
+    @ArgumentsSource(ScenarioProvider.class)
+    public void testContentListenerAsCompleteListener(Scenario scenario) throws Exception
+    {
+        byte[] bytes = new byte[1024];
+        new Random().nextBytes(bytes);
+        start(scenario, new AbstractHandler()
+        {
+            @Override
+            public void handle(String target, org.eclipse.jetty.server.Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException
+            {
+                baseRequest.setHandled(true);
+                ServletOutputStream output = response.getOutputStream();
+                output.write(bytes);
+            }
+        });
+
+        ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        CountDownLatch latch = new CountDownLatch(1);
+        class L implements Response.ContentListener, Response.CompleteListener
+        {
+            @Override
+            public void onContent(Response response, ByteBuffer content)
+            {
+                try
+                {
+                    BufferUtil.writeTo(content, baos);
+                }
+                catch (IOException x)
+                {
+                    baos.reset();
+                    x.printStackTrace();
+                }
+            }
+
+            @Override
+            public void onComplete(Result result)
+            {
+                if (result.isSucceeded())
+                    latch.countDown();
+            }
+        }
+
+        client.newRequest("localhost", connector.getLocalPort())
+            .scheme(scenario.getScheme())
+            .send(new L());
+
+        assertTrue(latch.await(5, TimeUnit.SECONDS));
+        assertArrayEquals(bytes, baos.toByteArray());
+    }
+
     private void assertCopyRequest(Request original)
     {
-        Request copy = client.copyRequest((HttpRequest) original, original.getURI());
+        Request copy = client.copyRequest((HttpRequest)original, original.getURI());
         assertEquals(original.getURI(), copy.getURI());
         assertEquals(original.getMethod(), copy.getMethod());
         assertEquals(original.getVersion(), copy.getVersion());
-        assertEquals(original.getContent(), copy.getContent());
+        assertEquals(original.getBody(), copy.getBody());
         assertEquals(original.getIdleTimeout(), copy.getIdleTimeout());
         assertEquals(original.getTimeout(), copy.getTimeout());
         assertEquals(original.isFollowRedirects(), copy.isFollowRedirects());
@@ -1804,7 +1853,7 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         }
     }
 
-    public static abstract class RetryListener implements Response.CompleteListener
+    public abstract static class RetryListener implements Response.CompleteListener
     {
         private final HttpClient client;
         private final String scheme;
@@ -1842,11 +1891,11 @@ public class HttpClientTest extends AbstractHttpClientServerTest
         public void perform()
         {
             client.newRequest(host, port)
-                    .scheme(scheme)
-                    .method("POST")
-                    .param("attempt", String.valueOf(retries))
-                    .content(new StringContentProvider("0123456789ABCDEF"))
-                    .send(this);
+                .scheme(scheme)
+                .method("POST")
+                .param("attempt", String.valueOf(retries))
+                .body(new StringRequestContent("0123456789ABCDEF"))
+                .send(this);
         }
     }
 }
