@@ -1,19 +1,19 @@
 //
-//  ========================================================================
-//  Copyright (c) 1995-2019 Mort Bay Consulting Pty. Ltd.
-//  ------------------------------------------------------------------------
-//  All rights reserved. This program and the accompanying materials
-//  are made available under the terms of the Eclipse Public License v1.0
-//  and Apache License v2.0 which accompanies this distribution.
+// ========================================================================
+// Copyright (c) 1995-2020 Mort Bay Consulting Pty Ltd and others.
 //
-//      The Eclipse Public License is available at
-//      http://www.eclipse.org/legal/epl-v10.html
+// This program and the accompanying materials are made available under
+// the terms of the Eclipse Public License 2.0 which is available at
+// https://www.eclipse.org/legal/epl-2.0
 //
-//      The Apache License v2.0 is available at
-//      http://www.opensource.org/licenses/apache2.0.php
+// This Source Code may also be made available under the following
+// Secondary Licenses when the conditions for such availability set
+// forth in the Eclipse Public License, v. 2.0 are satisfied:
+// the Apache License v2.0 which is available at
+// https://www.apache.org/licenses/LICENSE-2.0
 //
-//  You may elect to redistribute this code under either of these licenses.
-//  ========================================================================
+// SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
+// ========================================================================
 //
 
 package org.eclipse.jetty.proxy;
@@ -21,7 +21,6 @@ package org.eclipse.jetty.proxy;
 import java.net.InetAddress;
 import java.net.URI;
 import java.net.UnknownHostException;
-import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -29,7 +28,6 @@ import java.util.Locale;
 import java.util.Set;
 import java.util.concurrent.Executor;
 import java.util.concurrent.TimeoutException;
-
 import javax.servlet.AsyncContext;
 import javax.servlet.ServletConfig;
 import javax.servlet.ServletContext;
@@ -44,16 +42,19 @@ import org.eclipse.jetty.client.HttpClient;
 import org.eclipse.jetty.client.ProtocolHandlers;
 import org.eclipse.jetty.client.api.Request;
 import org.eclipse.jetty.client.api.Response;
-import org.eclipse.jetty.client.http.HttpClientTransportOverHTTP;
+import org.eclipse.jetty.client.dynamic.HttpClientTransportDynamic;
 import org.eclipse.jetty.http.HttpField;
+import org.eclipse.jetty.http.HttpFields;
 import org.eclipse.jetty.http.HttpHeader;
 import org.eclipse.jetty.http.HttpHeaderValue;
+import org.eclipse.jetty.http.HttpScheme;
 import org.eclipse.jetty.http.HttpStatus;
+import org.eclipse.jetty.io.ClientConnector;
 import org.eclipse.jetty.util.HttpCookieStore;
-import org.eclipse.jetty.util.ProcessorUtils;
-import org.eclipse.jetty.util.log.Log;
-import org.eclipse.jetty.util.log.Logger;
+import org.eclipse.jetty.util.StringUtil;
 import org.eclipse.jetty.util.thread.QueuedThreadPool;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * <p>Abstract base class for proxy servlets.</p>
@@ -84,21 +85,17 @@ import org.eclipse.jetty.util.thread.QueuedThreadPool;
 public abstract class AbstractProxyServlet extends HttpServlet
 {
     protected static final String CLIENT_REQUEST_ATTRIBUTE = "org.eclipse.jetty.proxy.clientRequest";
-    protected static final Set<String> HOP_HEADERS;
-    static
-    {
-        Set<String> hopHeaders = new HashSet<>();
-        hopHeaders.add("connection");
-        hopHeaders.add("keep-alive");
-        hopHeaders.add("proxy-authorization");
-        hopHeaders.add("proxy-authenticate");
-        hopHeaders.add("proxy-connection");
-        hopHeaders.add("transfer-encoding");
-        hopHeaders.add("te");
-        hopHeaders.add("trailer");
-        hopHeaders.add("upgrade");
-        HOP_HEADERS = Collections.unmodifiableSet(hopHeaders);
-    }
+    protected static final Set<String> HOP_HEADERS = Set.of(
+        "connection",
+        "keep-alive",
+        "proxy-authorization",
+        "proxy-authenticate",
+        "proxy-connection",
+        "transfer-encoding",
+        "te",
+        "trailer",
+        "upgrade"
+    );
 
     private final Set<String> _whiteList = new HashSet<>();
     private final Set<String> _blackList = new HashSet<>();
@@ -155,7 +152,7 @@ public abstract class AbstractProxyServlet extends HttpServlet
         catch (Exception x)
         {
             if (_log.isDebugEnabled())
-                _log.debug(x);
+                _log.debug("Failed to stop client", x);
         }
     }
 
@@ -207,12 +204,12 @@ public abstract class AbstractProxyServlet extends HttpServlet
     protected Logger createLogger()
     {
         String servletName = getServletConfig().getServletName();
-        servletName = servletName.replace('-', '.');
+        servletName = StringUtil.replace(servletName, '-', '.');
         if ((getClass().getPackage() != null) && !servletName.startsWith(getClass().getPackage().getName()))
         {
             servletName = getClass().getName() + "." + servletName;
         }
-        return Log.getLogger(servletName);
+        return LoggerFactory.getLogger(servletName);
     }
 
     /**
@@ -266,9 +263,10 @@ public abstract class AbstractProxyServlet extends HttpServlet
      * </tr>
      * </tbody>
      * </table>
-     * @see #newHttpClient()
+     *
      * @return a {@link HttpClient} configured from the {@link #getServletConfig() servlet configuration}
      * @throws ServletException if the {@link HttpClient} cannot be created
+     * @see #newHttpClient()
      */
     protected HttpClient createHttpClient() throws ServletException
     {
@@ -287,18 +285,18 @@ public abstract class AbstractProxyServlet extends HttpServlet
         if (value == null || "-".equals(value))
         {
             executor = (Executor)getServletContext().getAttribute("org.eclipse.jetty.server.Executor");
-            if (executor==null)
+            if (executor == null)
                 throw new IllegalStateException("No server executor for proxy");
         }
         else
         {
-            QueuedThreadPool qtp= new QueuedThreadPool(Integer.parseInt(value));
+            QueuedThreadPool qtp = new QueuedThreadPool(Integer.parseInt(value));
             String servletName = config.getServletName();
             int dot = servletName.lastIndexOf('.');
             if (dot >= 0)
                 servletName = servletName.substring(dot + 1);
             qtp.setName(servletName);
-            executor=qtp;
+            executor = qtp;
         }
 
         client.setExecutor(executor);
@@ -349,15 +347,28 @@ public abstract class AbstractProxyServlet extends HttpServlet
     /**
      * The servlet init parameter 'selectors' can be set for the number of
      * selector threads to be used by the HttpClient.
+     *
      * @return a new HttpClient instance
      */
     protected HttpClient newHttpClient()
     {
-        int selectors = Math.max(1,ProcessorUtils.availableProcessors()/2);
+        int selectors = 1;
         String value = getServletConfig().getInitParameter("selectors");
         if (value != null)
             selectors = Integer.parseInt(value);
-        return new HttpClient(new HttpClientTransportOverHTTP(selectors),null);
+        ClientConnector clientConnector = newClientConnector();
+        clientConnector.setSelectors(selectors);
+        return newHttpClient(clientConnector);
+    }
+
+    protected HttpClient newHttpClient(ClientConnector clientConnector)
+    {
+        return new HttpClient(new HttpClientTransportDynamic(clientConnector));
+    }
+
+    protected ClientConnector newClientConnector()
+    {
+        return new ClientConnector();
     }
 
     protected HttpClient getHttpClient()
@@ -414,8 +425,14 @@ public abstract class AbstractProxyServlet extends HttpServlet
     {
         if (!validateDestination(clientRequest.getServerName(), clientRequest.getServerPort()))
             return null;
-
+        // If the proxy is secure, we will likely get a proxied URI
+        // with the "https" scheme, but the upstream server needs
+        // to be called with the "http" scheme (the ConnectHandler
+        // is used to call upstream servers with the "https" scheme).
         StringBuffer target = clientRequest.getRequestURL();
+        // Change "https" to "http".
+        if (HttpScheme.HTTPS.is(target.substring(0, 5)))
+            target.replace(4, 5, "");
         String query = clientRequest.getQueryString();
         if (query != null)
             target.append("?").append(query);
@@ -440,8 +457,8 @@ public abstract class AbstractProxyServlet extends HttpServlet
     protected boolean hasContent(HttpServletRequest clientRequest)
     {
         return clientRequest.getContentLength() > 0 ||
-                clientRequest.getContentType() != null ||
-                clientRequest.getHeader(HttpHeader.TRANSFER_ENCODING.asString()) != null;
+            clientRequest.getContentType() != null ||
+            clientRequest.getHeader(HttpHeader.TRANSFER_ENCODING.asString()) != null;
     }
 
     protected boolean expects100Continue(HttpServletRequest request)
@@ -452,11 +469,11 @@ public abstract class AbstractProxyServlet extends HttpServlet
     protected void copyRequestHeaders(HttpServletRequest clientRequest, Request proxyRequest)
     {
         // First clear possibly existing headers, as we are going to copy those from the client request.
-        proxyRequest.getHeaders().clear();
+        HttpFields.Mutable newHeaders = HttpFields.build();
 
         Set<String> headersToRemove = findConnectionHeaders(clientRequest);
 
-        for (Enumeration<String> headerNames = clientRequest.getHeaderNames(); headerNames.hasMoreElements();)
+        for (Enumeration<String> headerNames = clientRequest.getHeaderNames(); headerNames.hasMoreElements(); )
         {
             String headerName = headerNames.nextElement();
             String lowerHeaderName = headerName.toLowerCase(Locale.ENGLISH);
@@ -470,17 +487,19 @@ public abstract class AbstractProxyServlet extends HttpServlet
             if (headersToRemove != null && headersToRemove.contains(lowerHeaderName))
                 continue;
 
-            for (Enumeration<String> headerValues = clientRequest.getHeaders(headerName); headerValues.hasMoreElements();)
+            for (Enumeration<String> headerValues = clientRequest.getHeaders(headerName); headerValues.hasMoreElements(); )
             {
                 String headerValue = headerValues.nextElement();
                 if (headerValue != null)
-                    proxyRequest.header(headerName, headerValue);
+                    newHeaders.add(headerName, headerValue);
             }
         }
 
         // Force the Host header if configured
         if (_hostHeader != null)
-            proxyRequest.header(HttpHeader.HOST, _hostHeader);
+            newHeaders.add(HttpHeader.HOST, _hostHeader);
+
+        proxyRequest.headers(headers -> headers.clear().add(newHeaders));
     }
 
     protected Set<String> findConnectionHeaders(HttpServletRequest clientRequest)
@@ -512,15 +531,19 @@ public abstract class AbstractProxyServlet extends HttpServlet
 
     protected void addViaHeader(Request proxyRequest)
     {
-        proxyRequest.header(HttpHeader.VIA, "http/1.1 " + getViaHost());
+        proxyRequest.headers(headers -> headers.add(HttpHeader.VIA, "http/1.1 " + getViaHost()));
     }
 
     protected void addXForwardedHeaders(HttpServletRequest clientRequest, Request proxyRequest)
     {
-        proxyRequest.header(HttpHeader.X_FORWARDED_FOR, clientRequest.getRemoteAddr());
-        proxyRequest.header(HttpHeader.X_FORWARDED_PROTO, clientRequest.getScheme());
-        proxyRequest.header(HttpHeader.X_FORWARDED_HOST, clientRequest.getHeader(HttpHeader.HOST.asString()));
-        proxyRequest.header(HttpHeader.X_FORWARDED_SERVER, clientRequest.getLocalName());
+        proxyRequest.headers(headers -> headers.add(HttpHeader.X_FORWARDED_FOR, clientRequest.getRemoteAddr()));
+        proxyRequest.headers(headers -> headers.add(HttpHeader.X_FORWARDED_PROTO, clientRequest.getScheme()));
+        String hostHeader = clientRequest.getHeader(HttpHeader.HOST.asString());
+        if (hostHeader != null)
+            proxyRequest.headers(headers -> headers.add(HttpHeader.X_FORWARDED_HOST, hostHeader));
+        String localName = clientRequest.getLocalName();
+        if (localName != null)
+            proxyRequest.headers(headers -> headers.add(HttpHeader.X_FORWARDED_SERVER, localName));
     }
 
     protected void sendProxyRequest(HttpServletRequest clientRequest, HttpServletResponse proxyResponse, Request proxyRequest)
@@ -533,11 +556,11 @@ public abstract class AbstractProxyServlet extends HttpServlet
             if (query != null)
                 builder.append("?").append(query);
             builder.append(" ").append(clientRequest.getProtocol()).append(System.lineSeparator());
-            for (Enumeration<String> headerNames = clientRequest.getHeaderNames(); headerNames.hasMoreElements();)
+            for (Enumeration<String> headerNames = clientRequest.getHeaderNames(); headerNames.hasMoreElements(); )
             {
                 String headerName = headerNames.nextElement();
                 builder.append(headerName).append(": ");
-                for (Enumeration<String> headerValues = clientRequest.getHeaders(headerName); headerValues.hasMoreElements();)
+                for (Enumeration<String> headerValues = clientRequest.getHeaders(headerName); headerValues.hasMoreElements(); )
                 {
                     String headerValue = headerValues.nextElement();
                     if (headerValue != null)
@@ -550,12 +573,12 @@ public abstract class AbstractProxyServlet extends HttpServlet
             builder.append(System.lineSeparator());
 
             _log.debug("{} proxying to upstream:{}{}{}{}{}",
-                    getRequestId(clientRequest),
-                    System.lineSeparator(),
-                    builder,
-                    proxyRequest,
-                    System.lineSeparator(),
-                    proxyRequest.getHeaders().toString().trim());
+                getRequestId(clientRequest),
+                System.lineSeparator(),
+                builder,
+                proxyRequest,
+                System.lineSeparator(),
+                proxyRequest.getHeaders().toString().trim());
         }
 
         proxyRequest.send(newProxyResponseListener(clientRequest, proxyResponse));
@@ -568,11 +591,16 @@ public abstract class AbstractProxyServlet extends HttpServlet
         boolean aborted = proxyRequest.abort(failure);
         if (!aborted)
         {
-            int status = failure instanceof TimeoutException ?
-                    HttpStatus.REQUEST_TIMEOUT_408 :
-                    HttpStatus.INTERNAL_SERVER_ERROR_500;
+            int status = clientRequestStatus(failure);
             sendProxyResponseError(clientRequest, proxyResponse, status);
         }
+    }
+
+    protected int clientRequestStatus(Throwable failure)
+    {
+        return failure instanceof TimeoutException
+            ? HttpStatus.REQUEST_TIMEOUT_408
+            : HttpStatus.INTERNAL_SERVER_ERROR_500;
     }
 
     protected void onServerResponseHeaders(HttpServletRequest clientRequest, HttpServletResponse proxyResponse, Response serverResponse)
@@ -595,7 +623,7 @@ public abstract class AbstractProxyServlet extends HttpServlet
         {
             StringBuilder builder = new StringBuilder(System.lineSeparator());
             builder.append(clientRequest.getProtocol()).append(" ").append(proxyResponse.getStatus())
-                    .append(" ").append(serverResponse.getReason()).append(System.lineSeparator());
+                .append(" ").append(serverResponse.getReason()).append(System.lineSeparator());
             for (String headerName : proxyResponse.getHeaderNames())
             {
                 builder.append(headerName).append(": ");
@@ -609,14 +637,10 @@ public abstract class AbstractProxyServlet extends HttpServlet
                 }
                 builder.append(System.lineSeparator());
             }
-            _log.debug("{} proxying to downstream:{}{}{}{}{}",
-                    getRequestId(clientRequest),
-                    System.lineSeparator(),
-                    serverResponse,
-                    System.lineSeparator(),
-                    serverResponse.getHeaders().toString().trim(),
-                    System.lineSeparator(),
-                    builder);
+            _log.debug("{} proxying to downstream:{}{}",
+                getRequestId(clientRequest),
+                System.lineSeparator(),
+                builder);
         }
     }
 
@@ -639,14 +663,18 @@ public abstract class AbstractProxyServlet extends HttpServlet
         if (_log.isDebugEnabled())
             _log.debug(getRequestId(clientRequest) + " proxying failed", failure);
 
-        int status = failure instanceof TimeoutException ?
-            HttpStatus.GATEWAY_TIMEOUT_504 :
-                HttpStatus.BAD_GATEWAY_502;
+        int status = proxyResponseStatus(failure);
         int serverStatus = serverResponse == null ? status : serverResponse.getStatus();
         if (expects100Continue(clientRequest) && serverStatus >= HttpStatus.OK_200)
             status = serverStatus;
         sendProxyResponseError(clientRequest, proxyResponse, status);
-        
+    }
+
+    protected int proxyResponseStatus(Throwable failure)
+    {
+        return failure instanceof TimeoutException
+            ? HttpStatus.GATEWAY_TIMEOUT_504
+            : HttpStatus.BAD_GATEWAY_502;
     }
 
     protected int getRequestId(HttpServletRequest clientRequest)
@@ -665,9 +693,17 @@ public abstract class AbstractProxyServlet extends HttpServlet
             }
             proxyResponse.sendError(status);
         }
-        catch(Exception e)
+        catch (Exception e)
         {
-            _log.ignore(e);
+            _log.trace("IGNORED", e);
+            try
+            {
+                proxyResponse.sendError(-1);
+            }
+            catch (Exception e2)
+            {
+                _log.trace("IGNORED", e2);
+            }
         }
         finally
         {
