@@ -1,29 +1,22 @@
 //
-//  ========================================================================
-//  Copyright (c) 1995-2019 Mort Bay Consulting Pty. Ltd.
-//  ------------------------------------------------------------------------
-//  All rights reserved. This program and the accompanying materials
-//  are made available under the terms of the Eclipse Public License v1.0
-//  and Apache License v2.0 which accompanies this distribution.
+// ========================================================================
+// Copyright (c) 1995-2020 Mort Bay Consulting Pty Ltd and others.
 //
-//      The Eclipse Public License is available at
-//      http://www.eclipse.org/legal/epl-v10.html
+// This program and the accompanying materials are made available under
+// the terms of the Eclipse Public License 2.0 which is available at
+// https://www.eclipse.org/legal/epl-2.0
 //
-//      The Apache License v2.0 is available at
-//      http://www.opensource.org/licenses/apache2.0.php
+// This Source Code may also be made available under the following
+// Secondary Licenses when the conditions for such availability set
+// forth in the Eclipse Public License, v. 2.0 are satisfied:
+// the Apache License v2.0 which is available at
+// https://www.apache.org/licenses/LICENSE-2.0
 //
-//  You may elect to redistribute this code under either of these licenses.
-//  ========================================================================
+// SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
+// ========================================================================
 //
 
 package org.eclipse.jetty.proxy;
-
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
@@ -48,7 +41,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.zip.GZIPInputStream;
 import java.util.zip.GZIPOutputStream;
-
 import javax.servlet.ServletException;
 import javax.servlet.ServletInputStream;
 import javax.servlet.ServletOutputStream;
@@ -58,18 +50,17 @@ import javax.servlet.http.HttpServletResponse;
 
 import org.eclipse.jetty.client.HttpClient;
 import org.eclipse.jetty.client.HttpProxy;
-import org.eclipse.jetty.client.api.ContentProvider;
 import org.eclipse.jetty.client.api.ContentResponse;
 import org.eclipse.jetty.client.api.Request;
 import org.eclipse.jetty.client.api.Response;
-import org.eclipse.jetty.client.api.Result;
-import org.eclipse.jetty.client.util.BytesContentProvider;
-import org.eclipse.jetty.client.util.DeferredContentProvider;
+import org.eclipse.jetty.client.util.AsyncRequestContent;
+import org.eclipse.jetty.client.util.BytesRequestContent;
 import org.eclipse.jetty.client.util.FutureResponseListener;
 import org.eclipse.jetty.http.HttpHeader;
 import org.eclipse.jetty.http.HttpHeaderValue;
 import org.eclipse.jetty.http.HttpStatus;
 import org.eclipse.jetty.io.RuntimeIOException;
+import org.eclipse.jetty.logging.StacklessLogging;
 import org.eclipse.jetty.server.HttpChannel;
 import org.eclipse.jetty.server.HttpConfiguration;
 import org.eclipse.jetty.server.HttpConnectionFactory;
@@ -82,18 +73,25 @@ import org.eclipse.jetty.util.BufferUtil;
 import org.eclipse.jetty.util.IO;
 import org.eclipse.jetty.util.Utf8StringBuilder;
 import org.eclipse.jetty.util.ajax.JSON;
-import org.eclipse.jetty.util.log.Log;
-import org.eclipse.jetty.util.log.Logger;
-import org.eclipse.jetty.util.log.StacklessLogging;
 import org.eclipse.jetty.util.thread.QueuedThreadPool;
 import org.junit.jupiter.api.AfterEach;
-
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.OS;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+@Disabled("See issue #3974")
 public class AsyncMiddleManServletTest
 {
-    private static final Logger LOG = Log.getLogger(AsyncMiddleManServletTest.class);
+    private static final Logger LOG = LoggerFactory.getLogger(AsyncMiddleManServletTest.class);
     private static final String PROXIED_HEADER = "X-Proxied";
 
     private HttpClient client;
@@ -120,7 +118,7 @@ public class AsyncMiddleManServletTest
 
     private void startProxy(AsyncMiddleManServlet proxyServlet) throws Exception
     {
-        startProxy(proxyServlet, new HashMap<String, String>());
+        startProxy(proxyServlet, new HashMap<>());
     }
 
     private void startProxy(AsyncMiddleManServlet proxyServlet, Map<String, String> initParams) throws Exception
@@ -144,8 +142,8 @@ public class AsyncMiddleManServletTest
         proxyContext.addServlet(proxyServletHolder, "/*");
 
         proxy.start();
-        
-        stackless=new StacklessLogging(proxyServlet._log);
+
+        stackless = new StacklessLogging(proxyServlet._log);
     }
 
     private void startClient() throws Exception
@@ -175,8 +173,8 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
     }
@@ -219,19 +217,19 @@ public class AsyncMiddleManServletTest
             @Override
             protected ContentTransformer newClientRequestContentTransformer(HttpServletRequest clientRequest, Request proxyRequest)
             {
-                return new GZIPContentTransformer(ContentTransformer.IDENTITY);
+                return new GZIPContentTransformer(getHttpClient(), ContentTransformer.IDENTITY);
             }
         });
         startClient();
 
         byte[] gzipBytes = gzip(bytes);
-        ContentProvider gzipContent = new BytesContentProvider(gzipBytes);
+        Request.Content gzipContent = new BytesRequestContent(gzipBytes);
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .header(HttpHeader.CONTENT_ENCODING, "gzip")
-                .content(gzipContent)
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .headers(headers -> headers.put(HttpHeader.CONTENT_ENCODING, HttpHeaderValue.GZIP))
+            .body(gzipContent)
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
         assertArrayEquals(bytes, response.getContent());
@@ -247,7 +245,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 response.setHeader(HttpHeader.CONTENT_ENCODING.asString(), "gzip");
                 response.getOutputStream().write(gzipBytes);
@@ -264,8 +262,8 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
         assertArrayEquals(bytes, response.getContent());
@@ -303,10 +301,10 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .header(HttpHeader.CONTENT_ENCODING, "gzip")
-                .content(new BytesContentProvider(gzip(bytes)))
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .headers(headers -> headers.put(HttpHeader.CONTENT_ENCODING, HttpHeaderValue.GZIP))
+            .body(new BytesRequestContent(gzip(bytes)))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
         assertArrayEquals(bytes, response.getContent());
@@ -318,7 +316,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 response.setHeader(HttpHeader.CONTENT_ENCODING.asString(), "gzip");
 
@@ -350,9 +348,9 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .header(HttpHeader.CONTENT_ENCODING, "gzip")
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .headers(headers -> headers.put(HttpHeader.CONTENT_ENCODING, HttpHeaderValue.GZIP))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
 
@@ -365,7 +363,9 @@ public class AsyncMiddleManServletTest
     public void testManySequentialTransformations() throws Exception
     {
         for (int i = 0; i < 8; ++i)
+        {
             testTransformUpstreamAndDownstreamKnownContentLengthGzipped();
+        }
     }
 
     @Test
@@ -390,12 +390,12 @@ public class AsyncMiddleManServletTest
         });
         startClient();
 
-        DeferredContentProvider content = new DeferredContentProvider();
+        AsyncRequestContent content = new AsyncRequestContent();
         Request request = client.newRequest("localhost", serverConnector.getLocalPort());
         FutureResponseListener listener = new FutureResponseListener(request);
-        request.header(HttpHeader.CONTENT_ENCODING, "gzip")
-                .content(content)
-                .send(listener);
+        request.headers(headers -> headers.put(HttpHeader.CONTENT_ENCODING, HttpHeaderValue.GZIP))
+            .body(content)
+            .send(listener);
         byte[] bytes = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".getBytes(StandardCharsets.UTF_8);
         content.offer(ByteBuffer.wrap(gzip(bytes)));
         sleep(1000);
@@ -412,7 +412,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 response.setHeader(HttpHeader.CONTENT_ENCODING.asString(), "gzip");
 
@@ -438,10 +438,10 @@ public class AsyncMiddleManServletTest
 
         byte[] bytes = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".getBytes(StandardCharsets.UTF_8);
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .header(HttpHeader.CONTENT_ENCODING, "gzip")
-                .content(new BytesContentProvider(gzip(bytes)))
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .headers(headers -> headers.put(HttpHeader.CONTENT_ENCODING, HttpHeaderValue.GZIP))
+            .body(new BytesRequestContent(gzip(bytes)))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
         assertArrayEquals(bytes, response.getContent());
@@ -454,7 +454,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 // decode input stream thru gzip
                 ByteArrayOutputStream bos = new ByteArrayOutputStream();
@@ -482,10 +482,10 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .header(HttpHeader.CONTENT_ENCODING, "gzip")
-                .content(new BytesContentProvider(gzip(bytes)))
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .headers(headers -> headers.put(HttpHeader.CONTENT_ENCODING, HttpHeaderValue.GZIP))
+            .body(new BytesRequestContent(gzip(bytes)))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
         assertEquals(0, response.getContent().length);
@@ -500,13 +500,9 @@ public class AsyncMiddleManServletTest
             @Override
             protected ContentTransformer newClientRequestContentTransformer(HttpServletRequest clientRequest, Request proxyRequest)
             {
-                return new ContentTransformer()
+                return (input, finished, output) ->
                 {
-                    @Override
-                    public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output) throws IOException
-                    {
-                        throw new NullPointerException("explicitly_thrown_by_test");
-                    }
+                    throw new NullPointerException("explicitly_thrown_by_test");
                 };
             }
         });
@@ -514,9 +510,9 @@ public class AsyncMiddleManServletTest
 
         byte[] bytes = new byte[1024];
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .content(new BytesContentProvider(bytes))
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .body(new BytesRequestContent(bytes))
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(500, response.getStatus());
     }
@@ -524,7 +520,7 @@ public class AsyncMiddleManServletTest
     @Test
     public void testUpstreamTransformationThrowsAfterCommittingProxyRequest() throws Exception
     {
-        try (StacklessLogging scope = new StacklessLogging(HttpChannel.class))
+        try (StacklessLogging ignored = new StacklessLogging(HttpChannel.class))
         {
             startServer(new EchoHttpServlet());
             startProxy(new AsyncMiddleManServlet()
@@ -537,7 +533,7 @@ public class AsyncMiddleManServletTest
                         private int count;
 
                         @Override
-                        public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output) throws IOException
+                        public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output)
                         {
                             if (++count < 2)
                                 output.add(input);
@@ -549,19 +545,15 @@ public class AsyncMiddleManServletTest
             });
             startClient();
 
-            final CountDownLatch latch = new CountDownLatch(1);
-            DeferredContentProvider content = new DeferredContentProvider();
+            CountDownLatch latch = new CountDownLatch(1);
+            AsyncRequestContent content = new AsyncRequestContent();
             client.newRequest("localhost", serverConnector.getLocalPort())
-            .content(content)
-            .send(new Response.CompleteListener()
-            {
-                @Override
-                public void onComplete(Result result)
+                .body(content)
+                .send(result ->
                 {
                     if (result.isSucceeded() && result.getResponse().getStatus() == 502)
                         latch.countDown();
-                }
-            });
+                });
 
             content.offer(ByteBuffer.allocate(512));
             sleep(1000);
@@ -578,7 +570,7 @@ public class AsyncMiddleManServletTest
         testDownstreamTransformationThrows(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 // To trigger the test failure we need that onContent()
                 // is called twice, so the second time the test throws.
@@ -597,7 +589,7 @@ public class AsyncMiddleManServletTest
         testDownstreamTransformationThrows(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 // To trigger the test failure we need that onContent()
                 // is called only once, so the the test throws from onSuccess().
@@ -621,7 +613,7 @@ public class AsyncMiddleManServletTest
                     private int count;
 
                     @Override
-                    public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output) throws IOException
+                    public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output)
                     {
                         if (++count < 2)
                             output.add(input);
@@ -634,8 +626,8 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(502, response.getStatus());
     }
@@ -660,7 +652,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 OutputStream output = response.getOutputStream();
                 if (gzipped)
@@ -694,26 +686,18 @@ public class AsyncMiddleManServletTest
 
         final CountDownLatch latch = new CountDownLatch(1);
         client.newRequest("localhost", serverConnector.getLocalPort())
-                .onResponseContent(new Response.ContentListener()
-                {
-                    @Override
-                    public void onContent(Response response, ByteBuffer content)
-                    {
-                        // Slow down the reader so that the
-                        // write from the proxy gets congested.
-                        sleep(1);
-                    }
-                })
-                .send(new Response.CompleteListener()
-                {
-                    @Override
-                    public void onComplete(Result result)
-                    {
-                        assertTrue(result.isSucceeded());
-                        assertEquals(200, result.getResponse().getStatus());
-                        latch.countDown();
-                    }
-                });
+            .onResponseContent((response, content) ->
+            {
+                // Slow down the reader so that the
+                // write from the proxy gets congested.
+                sleep(1);
+            })
+            .send(result ->
+            {
+                assertTrue(result.isSucceeded());
+                assertEquals(200, result.getResponse().getStatus());
+                latch.countDown();
+            });
 
         assertTrue(latch.await(15, TimeUnit.SECONDS));
     }
@@ -724,7 +708,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 byte[] chunk = new byte[1024];
                 int contentLength = 2 * chunk.length;
@@ -741,22 +725,18 @@ public class AsyncMiddleManServletTest
             @Override
             protected ContentTransformer newServerResponseContentTransformer(HttpServletRequest clientRequest, HttpServletResponse proxyResponse, Response serverResponse)
             {
-                return new ContentTransformer()
+                return (input, finished, output) ->
                 {
-                    @Override
-                    public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output) throws IOException
-                    {
-                        if (!finished)
-                            output.add(input);
-                    }
+                    if (!finished)
+                        output.add(input);
                 };
             }
         });
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
     }
@@ -775,20 +755,16 @@ public class AsyncMiddleManServletTest
         });
         startClient();
 
-        final CountDownLatch latch = new CountDownLatch(1);
-        DeferredContentProvider content = new DeferredContentProvider();
+        CountDownLatch latch = new CountDownLatch(1);
+        AsyncRequestContent content = new AsyncRequestContent();
         client.newRequest("localhost", serverConnector.getLocalPort())
-                .content(content)
-                .send(new Response.CompleteListener()
-                {
-                    @Override
-                    public void onComplete(Result result)
-                    {
-                        System.err.println(result);
-                        if (result.getResponse().getStatus() == 500)
-                            latch.countDown();
-                    }
-                });
+            .body(content)
+            .send(result ->
+            {
+                System.err.println(result);
+                if (result.getResponse().getStatus() == 500)
+                    latch.countDown();
+            });
         content.offer(ByteBuffer.allocate(512));
         sleep(1000);
         content.offer(ByteBuffer.allocate(512));
@@ -800,7 +776,7 @@ public class AsyncMiddleManServletTest
     @Test
     public void testClientRequestReadFailsOnSecondRead() throws Exception
     {
-        try (StacklessLogging scope = new StacklessLogging(HttpChannel.class))
+        try (StacklessLogging ignored = new StacklessLogging(HttpChannel.class))
         {
             startServer(new EchoHttpServlet());
             startProxy(new AsyncMiddleManServlet()
@@ -818,19 +794,15 @@ public class AsyncMiddleManServletTest
             });
             startClient();
 
-            final CountDownLatch latch = new CountDownLatch(1);
-            DeferredContentProvider content = new DeferredContentProvider();
+            CountDownLatch latch = new CountDownLatch(1);
+            AsyncRequestContent content = new AsyncRequestContent();
             client.newRequest("localhost", serverConnector.getLocalPort())
-            .content(content)
-            .send(new Response.CompleteListener()
-            {
-                @Override
-                public void onComplete(Result result)
+                .body(content)
+                .send(result ->
                 {
                     if (result.getResponse().getStatus() == 502)
                         latch.countDown();
-                }
-            });
+                });
             content.offer(ByteBuffer.allocate(512));
             sleep(1000);
             content.offer(ByteBuffer.allocate(512));
@@ -857,7 +829,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 ServletOutputStream output = response.getOutputStream();
                 output.write(new byte[512]);
@@ -881,8 +853,8 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(502, response.getStatus());
     }
@@ -890,20 +862,21 @@ public class AsyncMiddleManServletTest
     @Test
     public void testAfterContentTransformer() throws Exception
     {
-        final String key0 = "id";
+        String key0 = "id";
         long value0 = 1;
-        final String key1 = "channel";
+        String key1 = "channel";
         String value1 = "foo";
-        final String json = "{ \"" + key0 + "\":" + value0 + ", \"" + key1 + "\":\"" + value1 + "\" }";
+        String jsonString = "{ \"" + key0 + "\":" + value0 + ", \"" + key1 + "\":\"" + value1 + "\" }";
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
-                response.getOutputStream().write(json.getBytes(StandardCharsets.UTF_8));
+                response.getOutputStream().write(jsonString.getBytes(StandardCharsets.UTF_8));
             }
         });
-        final String key2 = "c";
+        String key2 = "c";
+        JSON json = new JSON();
         startProxy(new AsyncMiddleManServlet()
         {
             @Override
@@ -916,12 +889,12 @@ public class AsyncMiddleManServletTest
                     {
                         InputStream input = source.getInputStream();
                         @SuppressWarnings("unchecked")
-                        Map<String, Object> obj = (Map<String, Object>)JSON.parse(new InputStreamReader(input, "UTF-8"));
+                        Map<String, Object> obj = (Map<String, Object>)json.fromJSON(new InputStreamReader(input, StandardCharsets.UTF_8));
                         // Transform the object.
                         obj.put(key2, obj.remove(key1));
                         try (OutputStream output = sink.getOutputStream())
                         {
-                            output.write(JSON.toString(obj).getBytes(StandardCharsets.UTF_8));
+                            output.write(json.toJSON(obj).getBytes(StandardCharsets.UTF_8));
                             return true;
                         }
                     }
@@ -931,12 +904,12 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
         @SuppressWarnings("unchecked")
-        Map<String, Object> obj = (Map<String, Object>)JSON.parse(response.getContentAsString());
+        Map<String, Object> obj = (Map<String, Object>)json.fromJSON(response.getContentAsString());
         assertNotNull(obj);
         assertEquals(2, obj.size());
         assertEquals(value0, obj.get(key0));
@@ -961,7 +934,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 // Write the content in two chunks.
                 int chunk = data.length / 2;
@@ -1000,8 +973,8 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(HttpStatus.OK_200, response.getStatus());
         assertArrayEquals(data, response.getContent());
@@ -1011,24 +984,25 @@ public class AsyncMiddleManServletTest
     public void testAfterContentTransformerOverflowingToDisk() throws Exception
     {
         // Make sure the temporary directory we use exists and it's empty.
-        final Path targetTestsDir = prepareTargetTestsDir();
+        Path targetTestsDir = prepareTargetTestsDir();
 
-        final String key0 = "id";
+        String key0 = "id";
         long value0 = 1;
-        final String key1 = "channel";
+        String key1 = "channel";
         String value1 = "foo";
-        final String json = "{ \"" + key0 + "\":" + value0 + ", \"" + key1 + "\":\"" + value1 + "\" }";
+        String jsonString = "{ \"" + key0 + "\":" + value0 + ", \"" + key1 + "\":\"" + value1 + "\" }";
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
-                response.getOutputStream().write(json.getBytes(StandardCharsets.UTF_8));
+                response.getOutputStream().write(jsonString.getBytes(StandardCharsets.UTF_8));
             }
         });
-        final String inputPrefix = "in_";
-        final String outputPrefix = "out_";
-        final String key2 = "c";
+        String inputPrefix = "in_";
+        String outputPrefix = "out_";
+        String key2 = "c";
+        JSON json = new JSON();
         startProxy(new AsyncMiddleManServlet()
         {
             @Override
@@ -1041,18 +1015,18 @@ public class AsyncMiddleManServletTest
                     {
                         InputStream input = source.getInputStream();
                         @SuppressWarnings("unchecked")
-                        Map<String, Object> obj = (Map<String, Object>)JSON.parse(new InputStreamReader(input, "UTF-8"));
+                        Map<String, Object> obj = (Map<String, Object>)json.fromJSON(new InputStreamReader(input, StandardCharsets.UTF_8));
                         // Transform the object.
                         obj.put(key2, obj.remove(key1));
                         try (OutputStream output = sink.getOutputStream())
                         {
-                            output.write(JSON.toString(obj).getBytes(StandardCharsets.UTF_8));
+                            output.write(json.toJSON(obj).getBytes(StandardCharsets.UTF_8));
                             return true;
                         }
                     }
                 };
                 transformer.setOverflowDirectory(targetTestsDir);
-                int maxBufferSize = json.length() / 4;
+                int maxBufferSize = jsonString.length() / 4;
                 transformer.setMaxInputBufferSize(maxBufferSize);
                 transformer.setInputFilePrefix(inputPrefix);
                 transformer.setMaxOutputBufferSize(maxBufferSize);
@@ -1063,12 +1037,12 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
         @SuppressWarnings("unchecked")
-        Map<String, Object> obj = (Map<String, Object>)JSON.parse(response.getContentAsString());
+        Map<String, Object> obj = (Map<String, Object>)json.fromJSON(response.getContentAsString());
         assertNotNull(obj);
         assertEquals(2, obj.size());
         assertEquals(value0, obj.get(key0));
@@ -1080,7 +1054,7 @@ public class AsyncMiddleManServletTest
         }
 
         // File deletion is delayed on windows, testing for deletion is not going to work
-        if(!OS.WINDOWS.isCurrentOs())
+        if (!OS.WINDOWS.isCurrentOs())
         {
             try (DirectoryStream<Path> paths = Files.newDirectoryStream(targetTestsDir, outputPrefix + "*.*"))
             {
@@ -1097,7 +1071,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 IO.copy(request.getInputStream(), IO.getNullStream());
             }
@@ -1139,16 +1113,16 @@ public class AsyncMiddleManServletTest
         // Send only part of the content; the proxy will idle timeout.
         final byte[] data = new byte[]{'c', 'a', 'f', 'e'};
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .content(new BytesContentProvider(data)
+            .body(new BytesRequestContent(data)
+            {
+                @Override
+                public long getLength()
                 {
-                    @Override
-                    public long getLength()
-                    {
-                        return data.length + 1;
-                    }
-                })
-                .timeout(5 * idleTimeout, TimeUnit.MILLISECONDS)
-                .send();
+                    return data.length + 1;
+                }
+            })
+            .timeout(5 * idleTimeout, TimeUnit.MILLISECONDS)
+            .send();
 
         assertTrue(destroyLatch.await(5 * idleTimeout, TimeUnit.MILLISECONDS));
         assertEquals(HttpStatus.REQUEST_TIMEOUT_408, response.getStatus());
@@ -1163,7 +1137,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
                 response.setHeader(HttpHeader.CONNECTION.asString(), HttpHeaderValue.CLOSE.asString());
                 response.setContentLength(2);
@@ -1207,8 +1181,8 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertTrue(serviceLatch.await(5, TimeUnit.SECONDS));
         assertTrue(destroyLatch.await(5, TimeUnit.SECONDS));
@@ -1229,19 +1203,20 @@ public class AsyncMiddleManServletTest
 
     private void testAfterContentTransformerDoNoTransform(final boolean readSource, final boolean useDisk) throws Exception
     {
-        final String key0 = "id";
+        String key0 = "id";
         long value0 = 1;
-        final String key1 = "channel";
+        String key1 = "channel";
         String value1 = "foo";
-        final String json = "{ \"" + key0 + "\":" + value0 + ", \"" + key1 + "\":\"" + value1 + "\" }";
+        String jsonString = "{ \"" + key0 + "\":" + value0 + ", \"" + key1 + "\":\"" + value1 + "\" }";
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response) throws IOException
             {
-                response.getOutputStream().write(json.getBytes(StandardCharsets.UTF_8));
+                response.getOutputStream().write(jsonString.getBytes(StandardCharsets.UTF_8));
             }
         });
+        JSON json = new JSON();
         startProxy(new AsyncMiddleManServlet()
         {
             @Override
@@ -1255,12 +1230,12 @@ public class AsyncMiddleManServletTest
                     }
 
                     @Override
-                    public boolean transform(Source source, Sink sink) throws IOException
+                    public boolean transform(Source source, Sink sink)
                     {
                         if (readSource)
                         {
                             InputStream input = source.getInputStream();
-                            JSON.parse(new InputStreamReader(input, "UTF-8"));
+                            json.fromJSON(new InputStreamReader(input, StandardCharsets.UTF_8));
                         }
                         // No transformation.
                         return false;
@@ -1271,12 +1246,12 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(200, response.getStatus());
         @SuppressWarnings("unchecked")
-        Map<String, Object> obj = (Map<String, Object>)JSON.parse(response.getContentAsString());
+        Map<String, Object> obj = (Map<String, Object>)json.fromJSON(response.getContentAsString());
         assertNotNull(obj);
         assertEquals(2, obj.size());
         assertEquals(value0, obj.get(key0));
@@ -1289,7 +1264,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void service(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException
+            protected void service(HttpServletRequest request, HttpServletResponse response)
             {
                 response.setStatus(HttpStatus.UNAUTHORIZED_401);
                 response.setHeader(HttpHeader.WWW_AUTHENTICATE.asString(), "Basic realm=\"test\"");
@@ -1304,7 +1279,7 @@ public class AsyncMiddleManServletTest
                 return new AfterContentTransformer()
                 {
                     @Override
-                    public boolean transform(Source source, Sink sink) throws IOException
+                    public boolean transform(Source source, Sink sink)
                     {
                         transformed.set(true);
                         return false;
@@ -1315,8 +1290,8 @@ public class AsyncMiddleManServletTest
         startClient();
 
         ContentResponse response = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
 
         assertEquals(HttpStatus.UNAUTHORIZED_401, response.getStatus());
         assertFalse(transformed.get());
@@ -1344,10 +1319,10 @@ public class AsyncMiddleManServletTest
         });
         startClient();
 
-        DeferredContentProvider content = new DeferredContentProvider();
+        AsyncRequestContent content = new AsyncRequestContent();
         Request request = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .content(content);
+            .timeout(5, TimeUnit.SECONDS)
+            .body(content);
         FutureResponseListener listener = new FutureResponseListener(request);
         request.send(listener);
 
@@ -1392,10 +1367,10 @@ public class AsyncMiddleManServletTest
         });
         startClient();
 
-        DeferredContentProvider content = new DeferredContentProvider();
+        AsyncRequestContent content = new AsyncRequestContent();
         Request request = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .content(content);
+            .timeout(5, TimeUnit.SECONDS)
+            .body(content);
         FutureResponseListener listener = new FutureResponseListener(request);
         request.send(listener);
 
@@ -1433,7 +1408,7 @@ public class AsyncMiddleManServletTest
                     private ByteBuffer buffer;
 
                     @Override
-                    public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output) throws IOException
+                    public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output)
                     {
                         // Buffer only the first chunk.
                         if (buffer == null)
@@ -1463,10 +1438,10 @@ public class AsyncMiddleManServletTest
         });
         startClient();
 
-        DeferredContentProvider content = new DeferredContentProvider();
+        AsyncRequestContent content = new AsyncRequestContent();
         Request request = client.newRequest("localhost", serverConnector.getLocalPort())
-                .timeout(5, TimeUnit.SECONDS)
-                .content(content);
+            .timeout(5, TimeUnit.SECONDS)
+            .body(content);
         FutureResponseListener listener = new FutureResponseListener(request);
         request.send(listener);
 
@@ -1495,7 +1470,7 @@ public class AsyncMiddleManServletTest
         startServer(new HttpServlet()
         {
             @Override
-            protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException
+            protected void doGet(HttpServletRequest req, HttpServletResponse resp)
             {
                 if (req.getHeader("Via") != null)
                     resp.addHeader(PROXIED_HEADER, "true");
@@ -1503,9 +1478,11 @@ public class AsyncMiddleManServletTest
             }
         });
         final String proxyTo = "http://localhost:" + serverConnector.getLocalPort();
-        AsyncMiddleManServlet proxyServlet = new AsyncMiddleManServlet.Transparent() {
+        AsyncMiddleManServlet proxyServlet = new AsyncMiddleManServlet.Transparent()
+        {
             @Override
-            protected ContentTransformer newServerResponseContentTransformer(HttpServletRequest clientRequest, HttpServletResponse proxyResponse, Response serverResponse) {
+            protected ContentTransformer newServerResponseContentTransformer(HttpServletRequest clientRequest, HttpServletResponse proxyResponse, Response serverResponse)
+            {
                 return ContentTransformer.IDENTITY;
             }
         };
@@ -1516,11 +1493,11 @@ public class AsyncMiddleManServletTest
 
         // Make the request to the proxy, it should transparently forward to the server
         ContentResponse response = client.newRequest("localhost", proxyConnector.getLocalPort())
-                .path(target)
-                .timeout(5, TimeUnit.SECONDS)
-                .send();
+            .path(target)
+            .timeout(5, TimeUnit.SECONDS)
+            .send();
         assertEquals(200, response.getStatus());
-        assertTrue(response.getHeaders().containsKey(PROXIED_HEADER));
+        assertTrue(response.getHeaders().contains(PROXIED_HEADER));
     }
 
     private Path prepareTargetTestsDir() throws IOException
@@ -1560,7 +1537,7 @@ public class AsyncMiddleManServletTest
         return out.toByteArray();
     }
 
-    private static abstract class HrefTransformer implements AsyncMiddleManServlet.ContentTransformer
+    private abstract static class HrefTransformer implements AsyncMiddleManServlet.ContentTransformer
     {
         private static final String PREFIX = "http://localhost/q=";
         private final HrefParser parser = new HrefParser();
@@ -1599,7 +1576,9 @@ public class AsyncMiddleManServletTest
                         // Transform the matches.
                         Utf8StringBuilder builder = new Utf8StringBuilder();
                         for (ByteBuffer buffer : matches)
+                        {
                             builder.append(buffer);
+                        }
                         String transformed = transform(builder.toString());
                         output.add(ByteBuffer.wrap(transformed.getBytes(StandardCharsets.UTF_8)));
                         output.add(slice);
@@ -1627,9 +1606,9 @@ public class AsyncMiddleManServletTest
         private static class Client extends HrefTransformer
         {
             @Override
-            protected String transform(String value) throws IOException
+            protected String transform(String value)
             {
-                String result = PREFIX + URLEncoder.encode(value, "UTF-8");
+                String result = PREFIX + URLEncoder.encode(value, StandardCharsets.UTF_8);
                 LOG.debug("{} -> {}", value, result);
                 return result;
             }
@@ -1638,9 +1617,9 @@ public class AsyncMiddleManServletTest
         private static class Server extends HrefTransformer
         {
             @Override
-            protected String transform(String value) throws IOException
+            protected String transform(String value)
             {
-                String result = URLDecoder.decode(value.substring(PREFIX.length()), "UTF-8");
+                String result = URLDecoder.decode(value.substring(PREFIX.length()), StandardCharsets.UTF_8);
                 LOG.debug("{} <- {}", value, result);
                 return result;
             }
@@ -1689,7 +1668,7 @@ public class AsyncMiddleManServletTest
         private final List<ByteBuffer> buffers = new ArrayList<>();
 
         @Override
-        public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output) throws IOException
+        public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output)
         {
             if (input.hasRemaining())
             {
@@ -1715,7 +1694,7 @@ public class AsyncMiddleManServletTest
         private StringBuilder head = new StringBuilder();
 
         @Override
-        public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output) throws IOException
+        public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output)
         {
             if (input.hasRemaining() && head != null)
             {
@@ -1723,12 +1702,12 @@ public class AsyncMiddleManServletTest
                 if (lnPos == -1)
                 {
                     // no linefeed found, copy it all
-                    copyHeadBytes(input,input.limit());
+                    copyHeadBytes(input, input.limit());
                 }
                 else
                 {
                     // found linefeed
-                    copyHeadBytes(input,lnPos);
+                    copyHeadBytes(input, lnPos);
                     output.addAll(getHeadBytes());
                     // mark head as sent
                     head = null;
@@ -1764,7 +1743,7 @@ public class AsyncMiddleManServletTest
 
         private List<ByteBuffer> getHeadBytes()
         {
-            ByteBuffer buf = BufferUtil.toBuffer(head.toString(),StandardCharsets.UTF_8);
+            ByteBuffer buf = BufferUtil.toBuffer(head.toString(), StandardCharsets.UTF_8);
             return Collections.singletonList(buf);
         }
     }
@@ -1772,7 +1751,7 @@ public class AsyncMiddleManServletTest
     private static class DiscardContentTransformer implements AsyncMiddleManServlet.ContentTransformer
     {
         @Override
-        public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output) throws IOException
+        public void transform(ByteBuffer input, boolean finished, List<ByteBuffer> output)
         {
         }
     }
